New Crowdin updates (#1650)

--- a/app/i18n/locales/it-IT.json
+++ b/app/i18n/locales/it-IT.json
@@ -25,13 +25,13 @@
   "api.errors.getTxsBodiesForUTXOsError": "Errore ricevuto dalla chiamata al metodo api durante il recupero TxBodies.",
   "api.errors.getUtxosForAddressesApiError": "Errore ricevuto dal server durante l'acquisizione UTxOs.",
   "api.errors.getUtxosSumsForAddressesApiError": "Errore ricevuto dal server durante il recupero del saldo.",
-  "api.errors.hardwareUnsupportedError": "This hardware wallet is currently not supported.",
+  "api.errors.hardwareUnsupportedError": "Questa azione non è supportata per l'hardware attualmente selezionato.",
   "api.errors.histoicalCoinPriceError": "I dati storici sul prezzo delle monete non sono al momento disponibili.",
   "api.errors.invalidMnemonicError": "La frase inserita non è valida, si prega di controllare.",
   "api.errors.invalidWitnessError": "La firma non è valida.",
   "api.errors.noInputsError": "Il portafoglio ripristinato dalla frase di recupero è vuoto. Si prega di controllare la frase di recupero e tentare nuovamente il ripristino.",
   "api.errors.pendingTransactionError": "Errore durante l'aggiornamento delle transazioni in sospeso.",
-  "api.errors.poolMissingApiError": "Could not find this pool. Double-check the ID and make sure the pool was not deregistered.",
+  "api.errors.poolMissingApiError": "Non riuscivo a trovare questo pool. Ricontrolla l'ID e assicurati che il pool non sia stato cancellato.",
   "api.errors.rollbackApiError": "Rollback rilevato.",
   "api.errors.sendTransactionApiError": "Errore ricevuto dal server durante l'invio della transazione.",
   "api.errors.sendTransactionError": "Errore ricevuto dalla chiamata con il metodo API durante l'invio della transazione.",
@@ -150,11 +150,11 @@
   "noticeBoard.topbar.title": "Notifica",
   "notprod.label.message": "ATTENZIONE: struttura non di produzione. Se è un problema inaspettato, ricontrolla l'installazione di Yoroi.",
   "profile.complexityLevel.advanced": "Avanzate",
-  "profile.complexityLevel.advanced.description": "I have a some understanding of blockchain and how cryptography is used to power both the blockchain itself and wallet software. I am okay with seeing options and functionality that critically depend on my understanding of these concepts.",
+  "profile.complexityLevel.advanced.description": "Ho una certa conoscenza delle blockchain e di come la crittografia sia usata per alimentare sia la blockchain stessa che il software del portafoglio. Mi va bene vedere opzioni e funzionalità che dipendono in modo critico dalla mia comprensione di questi concetti.",
   "profile.complexityLevel.selected.label": "Il tuo livello attuale di complessità è",
   "profile.complexityLevel.simple": "Semplice",
-  "profile.complexityLevel.simple.description": "Simplest experience possible. No previous knowledge in Blockchain required. Highly friendly to on-board beginners, and for users that prefer simplicity.",
-  "profile.complexityLevel.subtitle": "Understanding blockchain can be difficult, which is why we will try and keep the interface as simple as possible for you",
+  "profile.complexityLevel.simple.description": "L'esperienza più semplice possibile. Non sono richieste conoscenze precedenti in Blockchain. Altamente amichevole per i principianti, e per gli utenti che preferiscono la semplicità.",
+  "profile.complexityLevel.subtitle": "Capire le blochchain può essere difficile, per questo cercheremo di mantenere l'interfaccia il più semplice possibile per voi",
   "profile.complexityLevel.title": "Level of Interface Complexity",
   "profile.languageSelect.form.languageSelectLabel": "Seleziona la tua lingua",
   "profile.languageSelect.title": "Seleziona lingua",
@@ -282,8 +282,8 @@
   "transfer.form.masterkey.input.hint": "Inserisci la chiave principale",
   "transfer.form.masterkey.input.label": "Chiave principale",
   "transfer.form.masterkey.requirement": "Nota: le chiavi principali sono composte da 192 caratteri e con codifica esadecimale",
-  "transfer.instructions.attention.legacy": "I portafogli legacy creati durante l'era Byron (prima del 29 novembre 2019) non possono più essere utilizzati. Tuttavia, puoi trasferire i tuoi fondi legacy al tuo attuale portafoglio per accedere ai tuoi fondi.",
   "transfer.instructions.attention.title.label": "Attenzione",
+  "transfer.instructions.fee.source.disclaimer": "The transaction fee to claim funds will be paid by the wallet you currently have selected.",
   "transfer.instructions.hardware.disclaimer.checkbox": "Sono consapevole del fatto che entrare la frase di recupero del mio portafoglio hardware comporta un considerevole rischio.",
   "transfer.instructions.hardware.disclaimer.instructions1": "Quando avete impostato originariamente il vostro portafoglio hardware, vi è stato chiesto di scrivere una frase di recupero su un pezzo di carta. L'inserimento di questa frase vi permetterà di trasferire i vostri fondi dal vostro portafoglio hardware al portafoglio corrente.",
   "transfer.instructions.hardware.disclaimer.instructions2": "Se si utilizza questa funzione, si dovrebbe generare una nuova frase di recupero per il portafoglio hardware. Se non sapete perché o come farlo, vi raccomandiamo di non utilizzare questa funzione.",
@@ -293,8 +293,9 @@
   "transfer.legacy.daedalus.12word": "12-parole Portafoglio Daedalus",
   "transfer.legacy.daedalus.title": "Portafoglio Daedalus legacy",
   "transfer.legacy.icarus.title": "Icaro/Yoroi Wallet",
+  "transfer.rewards.paper.label": "Rewards from paper wallet",
+  "transfer.rewards.regular.label": "Rewards from recovery phrase",
   "transfer.summary.addressFrom.label": "Da",
-  "transfer.summary.addressTo.label": "A",
   "transfer.summary.finalBalance.label": "Saldo finale",
   "transfer.summary.recoveredBalance.label": "Saldo recuperato",
   "transfer.summary.transactionFee.label": "Commissioni di transazione",
@@ -350,6 +351,7 @@
   "wallet.address.category.byron": "Addresses created using the Byron-era address format",
   "wallet.address.category.group": "Addresses formed by the combination of a spending key and a staking key",
   "wallet.address.category.p2pk": "Addresses generated directly from a public key",
+  "wallet.address.category.reward": "Address for your staking key",
   "wallet.amountInput.feesLabel": "+ {amount} di commissioni",
   "wallet.backup.dialog.legacy.checkConfirm": "Vuoi verificare se il tuo portafoglio necessita di essere aggiornato?",
   "wallet.backup.dialog.legacy.explanation": "Se avevi ADA nel tuo portafoglio il 29 novembre 2019\n     devi aggiornare il tuo portafoglio a un \"portafoglio ricompense\" di Shelley.",
@@ -491,13 +493,15 @@
   "wallet.nav.type.paper": "Portafoglio di carta",
   "wallet.nav.type.standard": "Portafoglio Standard",
   "wallet.nav.type.trezor": "Portafoglio Trezor",
+  "wallet.navigation.delegationById": "Delegation by Id",
   "wallet.navigation.delegationDashboard": "Dashboard",
-  "wallet.navigation.delegationSimple": "Delegation",
+  "wallet.navigation.delegationList": "Delegation List",
   "wallet.navigation.receive": "Ricevi",
   "wallet.navigation.send": "Invia",
   "wallet.navigation.transactions": "Transazioni",
   "wallet.nowallet.subtitle": "Scegli un portafoglio dal menu a tendina in alto a destra",
   "wallet.nowallet.title": "Nessun portafoglio selezionato",
+  "wallet.problematic.explanation1": "The wallet you selected ({checksumTextPart}) was detected to contain some kind of issue.",
   "wallet.receive.confirmationDialog.addressDetailsTitleLabel": "Verifica indirizzo",
   "wallet.receive.confirmationDialog.addressLabel": "Indirizzo",
   "wallet.receive.confirmationDialog.addressesLabel": "Indirizzi",
@@ -513,6 +517,7 @@
   "wallet.receive.navigation.groupLabel": "Group",
   "wallet.receive.navigation.hasBalanceLabel": "Has Balance",
   "wallet.receive.navigation.p2pkLabel": "P2PK",
+  "wallet.receive.navigation.rewardLabel": "Reward",
   "wallet.receive.navigation.unusedLabel": "Unused",
   "wallet.receive.navigation.usedLabel": "Used",
   "wallet.receive.page.copyAddressLabel": "Copia l'indirizzo",
@@ -526,6 +531,8 @@
   "wallet.receive.page.noResultsFoundLabel": "No results found",
   "wallet.receive.page.notFoundAnyAddresses": "We couldn't find any addresses matching your filter.",
   "wallet.receive.page.outputAmountUTXO": "Balance (UTXO sum)",
+  "wallet.receive.page.rewardAddressLine1": "Your reward address holds your rewards and is used to validate any changes to your delegation preference",
+  "wallet.receive.page.rewardAddressLine2": "You cannot send ADA to reward addresses, but we show it for personal auditing purposes",
   "wallet.receive.page.unmangeLabel": "Correggi le preferenze di delega",
   "wallet.receive.page.verifyAddressLabel": "Verifica indirizzo",
   "wallet.receive.page.walletAddressLabel": "Il tuo indirizzo del portafoglio",
@@ -609,7 +616,6 @@
   "wallet.settings.unchangedPassword": "Password invariata dalla creazione del portafoglio",
   "wallet.staking.pool.unknownLabel": "Pool sconosciuta",
   "wallet.staking.warning.pendingTx": "Non è possibile modificare le preferenze di delega mentre è in corso una transazione",
-  "wallet.staking.warning.title": "Delega temporaneamente disabilitata",
   "wallet.summary.no.transaction": "Nessuna transazione trovata",
   "wallet.summary.page.dateTime": "Data/ora",
   "wallet.summary.page.integratedNotificationMessage": "You have successfully integrated with your {deviceName}",
@@ -665,13 +671,15 @@
   "wallet.transaction.type.exchange": "Exchange",
   "wallet.transaction.type.intrawallet": "{currency} transazione intrawallet",
   "wallet.transaction.type.multiparty": "{currency} transazione multiparty",
+  "wallet.transaction.withdrawalsLabel": "Withdrawals",
   "wallet.transfer.cards.byron": "Portafoglio era-Byron",
-  "wallet.transfer.cards.shelleyItn": "Shelley testnet",
+  "wallet.transfer.cards.shelley": "Shelley-era wallet",
   "wallet.transfer.instruction": "Qualsiasi richiesta di ADA verrà trasferito sul portafoglio selezionato",
   "wallet.undelegation.transaction.explanationLine1": "NON è necessario rimuovere la delega prima di cambiare pool",
   "wallet.undelegation.transaction.explanationLine2": "Ci vorranno 2 epoche dopo la fine dell'epoca attuale perché il ritiro delega abbia effetto",
   "wallet.unsupported.subtitle": "The selected wallet does not support this functionality",
   "wallet.unsupported.title": "Wallet type not supported",
+  "wallet.withdrawal.transaction.unregister": "This transaction will unregister one or more staking keys, giving you back your {refundAmount} ADA from your deposit",
   "widgets.copyableaddress.addressCopyTooltipMessage": "Copia negli appunti",
   "widgets.explorer.tooltip": "Vai a {websiteName}",
   "widgets.warningBox.headerText": "ATTENZIONE:",
@@ -689,7 +697,6 @@
   "yoroiTransfer.start.instructions.yoroiPaper": "Portafoglio cartaceo Yoroi",
   "yoroiTransfer.successPage.text": "I tuoi fondi sono stati trasferiti correttamente.",
   "yoroiTransfer.successPage.title": "eseguito con successo",
-  "yoroiTransfer.summary.addressFrom.subLabel": "Indirizzi del portafoglio",
   "yoroiTransfer.waiting.checkingAddresses.generatingTx": "Generazione di transazione di trasferimento",
   "yoroiTransfer.waiting.progressInfo.checkingAddresses": "Controllo dei fondi degli indirizzi",
   "yoroiTransfer.waiting.progressInfo.restoringAddresses": "Recupero degli indirizzi",
