--- a/app/i18n/locales/pt-BR.json
+++ b/app/i18n/locales/pt-BR.json
@@ -25,7 +25,7 @@
   "api.errors.getTxsBodiesForUTXOsError": "Erro recebido na chamada do método da API ao obter TxBodies.",
   "api.errors.getUtxosForAddressesApiError": "Erro recebido do servidor ao obter UTxOs.",
   "api.errors.getUtxosSumsForAddressesApiError": "Erro recebido do servidor ao obter o saldo",
-  "api.errors.hardwareUnsupportedError": "Atualmente, esta carteira de hardware não é suportada.",
+  "api.errors.hardwareUnsupportedError": "Esta ação não é compatível com a versão atual do hardware selecionado.",
   "api.errors.histoicalCoinPriceError": "Dados históricos de preços de moedas não estão disponíveis agora.",
   "api.errors.invalidMnemonicError": "\nFrase inserida é inválida, por favor, verifique.",
   "api.errors.invalidWitnessError": "A assinatura é inválida.",
@@ -167,11 +167,11 @@
   "profile.nightly.warning1": "O Yoroi Nightly NÃO opera em um blockchain ou servidor de teste simulado.",
   "profile.nightly.warning2": "Todas as transações enviadas serão visíveis on-chain e nos servidores de produção.",
   "profile.nightly.warningHeader": "Para simular um ambiente de produção:",
-  "profile.privacypolicy.header": "Yoroi irá...",
-  "profile.privacypolicy.neverAnalytics": "<strong>Nunca</strong> rode nenhuma ferramenta de análise ou software de rastreamento de terceiros.",
-  "profile.privacypolicy.neverProfile": "<strong>Nunca</strong> crie perfis com a suas informações.",
-  "profile.privacypolicy.neverSell": "<strong>Nunca</strong> venda seus dados.",
-  "profile.privacypolicy.neverTrack": "<strong>Nunca</strong> rastreie o seu comportamento.",
+  "profile.privacypolicy.header": "A Yoroi...",
+  "profile.privacypolicy.neverAnalytics": "<strong>Nunca</strong> executa nenhuma ferramenta de análise ou software de rastreamento de terceiros.",
+  "profile.privacypolicy.neverProfile": "<strong>Nunca</strong> cria perfis com a suas informações.",
+  "profile.privacypolicy.neverSell": "<strong>Nunca</strong> vende seus dados.",
+  "profile.privacypolicy.neverTrack": "<strong>Nunca</strong> rastreia o seu comportamento.",
   "profile.privacypolicy.serverLogs": "Qualquer log do servidor é mantido por no máximo 2 semanas para fins de solução de problemas do servidor.",
   "profile.termsOfUse.checkboxLabel": "Eu concordo com os termos de uso",
   "profile.termsOfUse.title": "Termos de uso",
@@ -282,8 +282,8 @@
   "transfer.form.masterkey.input.hint": "Inserir chave mestra",
   "transfer.form.masterkey.input.label": "Chave mestra",
   "transfer.form.masterkey.requirement": "Nota: as chaves mestras possuem 192 caracteres e codificação hexadecimal",
-  "transfer.instructions.attention.legacy": "Carteiras Legacy criadas durante a era Byron (antes de 29 de Novembro, 2019) não poderão ser utilizadas. No entanto, você pode transferir o saldo da sua carteira Byron para a sua carteira atual e acessar seus fundos.",
   "transfer.instructions.attention.title.label": "Atenção",
+  "transfer.instructions.fee.source.disclaimer": "A taxa de transferência para resgatar seus fundos será paga pela carteira que você selecionou.",
   "transfer.instructions.hardware.disclaimer.checkbox": "Eu reconheço que inserir minhas palavras de recuperação da hardware wallet acarreta em um risco significativo.",
   "transfer.instructions.hardware.disclaimer.instructions1": "Quando você configurou originalmente sua hardware wallet, foi solicitado que você escrevesse uma frase de recuperação em um pedaço de papel. A inserção dessa frase permitirá transferir seus fundos da hardware wallet para a carteira atual.",
   "transfer.instructions.hardware.disclaimer.instructions2": "Se você usar esse recurso, deverá gerar uma nova frase de recuperação para sua hardware wallet. Se você não sabe por que ou como fazer isso, não recomendamos que você use esse recurso.",
@@ -293,8 +293,9 @@
   "transfer.legacy.daedalus.12word": "12-palavras carteira Daedalus",
   "transfer.legacy.daedalus.title": "Carteira Legacy Daedalus",
   "transfer.legacy.icarus.title": "Carteira Icarus/Yoroi",
+  "transfer.rewards.paper.label": "Recompensas vindas da carteira de papel",
+  "transfer.rewards.regular.label": "Recompensas vindas da frase de recuperação",
   "transfer.summary.addressFrom.label": "De",
-  "transfer.summary.addressTo.label": "Para",
   "transfer.summary.finalBalance.label": "Saldo final",
   "transfer.summary.recoveredBalance.label": "Saldo recuperado",
   "transfer.summary.transactionFee.label": "Taxas de transação",
@@ -350,6 +351,7 @@
   "wallet.address.category.byron": "Endereços criados usando o formato de endereço da era Byron",
   "wallet.address.category.group": "Endereços formados pela combinação de uma chave de gastos e uma chave de stake",
   "wallet.address.category.p2pk": "Endereços gerados diretamente de uma chave pública",
+  "wallet.address.category.reward": "Endereço para sua chave de staking",
   "wallet.amountInput.feesLabel": "+ {amount} das taxas",
   "wallet.backup.dialog.legacy.checkConfirm": "Deseja verificar se sua carteira precisa ser atualizada?",
   "wallet.backup.dialog.legacy.explanation": "Se você tinha algum ADA em sua carteira em 29 de novembro de 2019\n    você precisa atualizar sua carteira para uma \"carteira de recompensa\" da Shelley.",
@@ -491,13 +493,15 @@
   "wallet.nav.type.paper": "Carteira de papel",
   "wallet.nav.type.standard": "Carteira padrão",
   "wallet.nav.type.trezor": "Trezor wallet",
+  "wallet.navigation.delegationById": "Delegação por Id",
   "wallet.navigation.delegationDashboard": "Painel",
-  "wallet.navigation.delegationSimple": "Delegar",
+  "wallet.navigation.delegationList": "Lista de delegação",
   "wallet.navigation.receive": "Receber",
   "wallet.navigation.send": "Enviar",
   "wallet.navigation.transactions": "Transações",
   "wallet.nowallet.subtitle": "Por favor escolha a carteira no menu do canto superior direito",
   "wallet.nowallet.title": "Nenhuma carteira selecionada",
+  "wallet.problematic.explanation1": "A carteira selecionada ({checksumTextPart}) foi detectado algum tipo de problema.",
   "wallet.receive.confirmationDialog.addressDetailsTitleLabel": "Verificar endereço",
   "wallet.receive.confirmationDialog.addressLabel": "Endereço",
   "wallet.receive.confirmationDialog.addressesLabel": "Endereços",
@@ -513,6 +517,7 @@
   "wallet.receive.navigation.groupLabel": "Grupo",
   "wallet.receive.navigation.hasBalanceLabel": "Contém Balanço",
   "wallet.receive.navigation.p2pkLabel": "P2PK",
+  "wallet.receive.navigation.rewardLabel": "Recompensa",
   "wallet.receive.navigation.unusedLabel": "Não utilizado",
   "wallet.receive.navigation.usedLabel": "Utilizado",
   "wallet.receive.page.copyAddressLabel": "Copiar endereço",
@@ -526,6 +531,8 @@
   "wallet.receive.page.noResultsFoundLabel": "Resultados não encontrados",
   "wallet.receive.page.notFoundAnyAddresses": "Não encontramos nenhum endereço coincidindo com seu filtro.",
   "wallet.receive.page.outputAmountUTXO": "Balanço (soma UTXO)",
+  "wallet.receive.page.rewardAddressLine1": "Your reward address holds your rewards and is used to validate any changes to your delegation preference",
+  "wallet.receive.page.rewardAddressLine2": "Você não pode enviar ADA para um endereço de recompensa, mas mostramos esse endereço para fins de auditoria pessoal",
   "wallet.receive.page.unmangeLabel": "Preferência de delegação correta",
   "wallet.receive.page.verifyAddressLabel": "Verificar endereço",
   "wallet.receive.page.walletAddressLabel": "O endereço da sua carteira",
@@ -609,7 +616,6 @@
   "wallet.settings.unchangedPassword": "Senha inalterada desde a criação da carteira",
   "wallet.staking.pool.unknownLabel": "Pool desconhecido",
   "wallet.staking.warning.pendingTx": "Você não pode mudar a sua delegação enquanto uma transação está pendente",
-  "wallet.staking.warning.title": "Delegação temporariamente desabilitada",
   "wallet.summary.no.transaction": "Nenhuma transação encontrada",
   "wallet.summary.page.dateTime": "Data/hora",
   "wallet.summary.page.integratedNotificationMessage": "Você se conectou com sucesso a sua {deviceName}",
@@ -665,13 +671,15 @@
   "wallet.transaction.type.exchange": "Exchange",
   "wallet.transaction.type.intrawallet": "{currency} transação interna",
   "wallet.transaction.type.multiparty": "{currency} transação de múltiplas partes",
+  "wallet.transaction.withdrawalsLabel": "Retiradas",
   "wallet.transfer.cards.byron": "Carteira Byron-era",
-  "wallet.transfer.cards.shelleyItn": "Shelley testenet",
+  "wallet.transfer.cards.shelley": "Carteira era-Shelley",
   "wallet.transfer.instruction": "Toda ADA solicitada será transferida para sua carteira selecionada recentemente",
   "wallet.undelegation.transaction.explanationLine1": "Você NÃO precisa desfazer a delegação para mudar de stake pool",
   "wallet.undelegation.transaction.explanationLine2": "Levará duas épocas após o final da época atual para que a remoção da delegação entre em vigor",
   "wallet.unsupported.subtitle": "A carteira selecionada não suporta esta funcionalidade",
   "wallet.unsupported.title": "Tipo de carteira não suportado",
+  "wallet.withdrawal.transaction.unregister": "Essa transação irá aposentar uma ou mais chaves de staking, isso lhe reembolsará as ADAs pagas como depósito",
   "widgets.copyableaddress.addressCopyTooltipMessage": "Copiar para área de transferência",
   "widgets.explorer.tooltip": "Ir para {websiteName}",
   "widgets.warningBox.headerText": "ATENÇÃO:",
@@ -689,7 +697,6 @@
   "yoroiTransfer.start.instructions.yoroiPaper": "Yoroi paper wallet",
   "yoroiTransfer.successPage.text": "Seus fundos foram transferidos com sucesso.",
   "yoroiTransfer.successPage.title": "sucesso",
-  "yoroiTransfer.summary.addressFrom.subLabel": "Endereços da Wallet",
   "yoroiTransfer.waiting.checkingAddresses.generatingTx": "Gerando transação de transferência",
   "yoroiTransfer.waiting.progressInfo.checkingAddresses": "Verificando endereços dos recursos",
   "yoroiTransfer.waiting.progressInfo.restoringAddresses": "Buscando endereços",
