--- a/app/i18n/locales/ru-RU.json
+++ b/app/i18n/locales/ru-RU.json
@@ -25,7 +25,7 @@
   "api.errors.getTxsBodiesForUTXOsError": "Получена ошибка при вызове метода Api во время получения TxBodies.",
   "api.errors.getUtxosForAddressesApiError": "Получена ошибка от сервера при получении UTxOs.",
   "api.errors.getUtxosSumsForAddressesApiError": "Получена ошибка от сервера при получении баланса.",
-  "api.errors.hardwareUnsupportedError": "This hardware wallet is currently not supported.",
+  "api.errors.hardwareUnsupportedError": "This action is not supported for the currently selected hardware.",
   "api.errors.histoicalCoinPriceError": "Historical coin price data not available now.",
   "api.errors.invalidMnemonicError": "Введена неверная фраза, пожалуйста, проверьте.",
   "api.errors.invalidWitnessError": "Подпись недействительна.",
@@ -282,8 +282,8 @@
   "transfer.form.masterkey.input.hint": "Ввести мастер-ключ",
   "transfer.form.masterkey.input.label": "Мастер-ключ",
   "transfer.form.masterkey.requirement": "Примечание: мастер-ключи состоят из 192 символов и закодированы в шестнадцатеричном формате",
-  "transfer.instructions.attention.legacy": "Старые кошельки, созданные во время эпохи Byron (перед 29-м ноября 2019 года) больше не могут быть использованы. Тем не менее, вы можете перевести средства со старого кошелька в свой текущий кошелек для получения доступа к ним.",
   "transfer.instructions.attention.title.label": "Внимание",
+  "transfer.instructions.fee.source.disclaimer": "The transaction fee to claim funds will be paid by the wallet you currently have selected.",
   "transfer.instructions.hardware.disclaimer.checkbox": "Я признаю, что ввод восстановительной фразы моего аппаратного кошелька несет значительный риск.",
   "transfer.instructions.hardware.disclaimer.instructions1": "При первоначальной настройке аппаратного кошелька вас попросили записать восстановительную фразу на листе бумаги. Ввод этой фразы позволит вам перевести средства из вашего аппаратного кошелька в данный кошелек.",
   "transfer.instructions.hardware.disclaimer.instructions2": "Если вы используете эту функцию, вы необходимо сгенерировать новую восстановительную фразу для вашего аппаратного кошелька. Если вы не знаете, почему или как это сделать, мы не рекомендуем использовать данную функцию.",
@@ -293,8 +293,9 @@
   "transfer.legacy.daedalus.12word": "Кошелек Daedalus из 12 слов",
   "transfer.legacy.daedalus.title": "Старый Daedalus Кошелек",
   "transfer.legacy.icarus.title": "Icarus/Yoroi кошелек",
+  "transfer.rewards.paper.label": "Rewards from paper wallet",
+  "transfer.rewards.regular.label": "Rewards from recovery phrase",
   "transfer.summary.addressFrom.label": "Из",
-  "transfer.summary.addressTo.label": "Куда",
   "transfer.summary.finalBalance.label": "Итоговый баланс",
   "transfer.summary.recoveredBalance.label": "Восстановленный баланс",
   "transfer.summary.transactionFee.label": "Комиссия",
@@ -350,6 +351,7 @@
   "wallet.address.category.byron": "Addresses created using the Byron-era address format",
   "wallet.address.category.group": "Addresses formed by the combination of a spending key and a staking key",
   "wallet.address.category.p2pk": "Addresses generated directly from a public key",
+  "wallet.address.category.reward": "Address for your staking key",
   "wallet.amountInput.feesLabel": "+ комиссия {amount}",
   "wallet.backup.dialog.legacy.checkConfirm": "Хотите ли вы проверить если необходимы обновления для вашего кошелька?",
   "wallet.backup.dialog.legacy.explanation": "Если в вашем кошельке была какая-либо сумма ADA на 29 ноября 2019 года,\n    вам необходимо обновить свой кошелек к версии Shelley \"кошелек для наград\".",
@@ -491,13 +493,15 @@
   "wallet.nav.type.paper": "Бумажный кошелек",
   "wallet.nav.type.standard": "Стандартный кошелек",
   "wallet.nav.type.trezor": "Кошелек Trezor",
+  "wallet.navigation.delegationById": "Delegation by Id",
   "wallet.navigation.delegationDashboard": "Кабинет",
-  "wallet.navigation.delegationSimple": "Delegation",
+  "wallet.navigation.delegationList": "Delegation List",
   "wallet.navigation.receive": "Получить",
   "wallet.navigation.send": "Отправить",
   "wallet.navigation.transactions": "Транзакции",
   "wallet.nowallet.subtitle": "Пожалуйста, выберите кошелек из выпадающего списка в правом верхнем углу",
   "wallet.nowallet.title": "Кошелек не выбран",
+  "wallet.problematic.explanation1": "The wallet you selected ({checksumTextPart}) was detected to contain some kind of issue.",
   "wallet.receive.confirmationDialog.addressDetailsTitleLabel": "Проверить адрес",
   "wallet.receive.confirmationDialog.addressLabel": "Адрес",
   "wallet.receive.confirmationDialog.addressesLabel": "Адреса",
@@ -513,6 +517,7 @@
   "wallet.receive.navigation.groupLabel": "Group",
   "wallet.receive.navigation.hasBalanceLabel": "Has Balance",
   "wallet.receive.navigation.p2pkLabel": "P2PK",
+  "wallet.receive.navigation.rewardLabel": "Reward",
   "wallet.receive.navigation.unusedLabel": "Unused",
   "wallet.receive.navigation.usedLabel": "Used",
   "wallet.receive.page.copyAddressLabel": "Скопировать адрес",
@@ -526,6 +531,8 @@
   "wallet.receive.page.noResultsFoundLabel": "No results found",
   "wallet.receive.page.notFoundAnyAddresses": "We couldn't find any addresses matching your filter.",
   "wallet.receive.page.outputAmountUTXO": "Balance (UTXO sum)",
+  "wallet.receive.page.rewardAddressLine1": "Your reward address holds your rewards and is used to validate any changes to your delegation preference",
+  "wallet.receive.page.rewardAddressLine2": "You cannot send ADA to reward addresses, but we show it for personal auditing purposes",
   "wallet.receive.page.unmangeLabel": "Правильные настройки делегирования",
   "wallet.receive.page.verifyAddressLabel": "Проверить адрес",
   "wallet.receive.page.walletAddressLabel": "Адрес Вашего кошелька",
@@ -609,7 +616,6 @@
   "wallet.settings.unchangedPassword": "Пароль не менялся с момента создания кошелька",
   "wallet.staking.pool.unknownLabel": "Неизвестный пул",
   "wallet.staking.warning.pendingTx": "Вы не можете изменить ваши настройки делегирования пока транзакция находится на подтверждении",
-  "wallet.staking.warning.title": "Делегирования временно отключено",
   "wallet.summary.no.transaction": "Транзакции не найдены",
   "wallet.summary.page.dateTime": "Дата/время",
   "wallet.summary.page.integratedNotificationMessage": "You have successfully integrated with your {deviceName}",
@@ -665,13 +671,15 @@
   "wallet.transaction.type.exchange": "Обмен",
   "wallet.transaction.type.intrawallet": "{currency} внутренняя транзакция",
   "wallet.transaction.type.multiparty": "{currency} смешанная транзакция",
+  "wallet.transaction.withdrawalsLabel": "Withdrawals",
   "wallet.transfer.cards.byron": "Кошелек Byron-эры",
-  "wallet.transfer.cards.shelleyItn": "Shelley testnet",
+  "wallet.transfer.cards.shelley": "Shelley-era wallet",
   "wallet.transfer.instruction": "Любая заявленная ADA будет переведена на Ваш текущий выбранный кошелек",
   "wallet.undelegation.transaction.explanationLine1": "Вам НЕ нужно отменять делегирование перед сменой пула",
   "wallet.undelegation.transaction.explanationLine2": "Чтобы разделегирование вступило в силу необходимо 2 эпохи после окончания текущей эпохи",
   "wallet.unsupported.subtitle": "The selected wallet does not support this functionality",
   "wallet.unsupported.title": "Wallet type not supported",
+  "wallet.withdrawal.transaction.unregister": "This transaction will unregister one or more staking keys, giving you back your {refundAmount} ADA from your deposit",
   "widgets.copyableaddress.addressCopyTooltipMessage": "Скопировать в буфер обмена",
   "widgets.explorer.tooltip": "Перейти на {websiteName}",
   "widgets.warningBox.headerText": "ВНИМАНИЕ:",
@@ -689,7 +697,6 @@
   "yoroiTransfer.start.instructions.yoroiPaper": "Бумажный кошелек Yoroi",
   "yoroiTransfer.successPage.text": "Ваши средства были успешно переведены.",
   "yoroiTransfer.successPage.title": "успешно",
-  "yoroiTransfer.summary.addressFrom.subLabel": "Адрес кошелька",
   "yoroiTransfer.waiting.checkingAddresses.generatingTx": "Создание перевода транзакции",
   "yoroiTransfer.waiting.progressInfo.checkingAddresses": "Проверка средств на адресах",
   "yoroiTransfer.waiting.progressInfo.restoringAddresses": "Получение адресов",
