--- a/app/i18n/locales/tr-TR.json
+++ b/app/i18n/locales/tr-TR.json
@@ -25,7 +25,7 @@
   "api.errors.getTxsBodiesForUTXOsError": "TxBodies alınırken api çağrı yönteminden hata alındı.",
   "api.errors.getUtxosForAddressesApiError": "UTxOs alınırken sunucudan hata alındı.",
   "api.errors.getUtxosSumsForAddressesApiError": "Bakiye alınırken sunucudan hata alındı.",
-  "api.errors.hardwareUnsupportedError": "Bu donanım cüzdanı şu anda desteklenmiyor.",
+  "api.errors.hardwareUnsupportedError": "This action is not supported for the currently selected hardware.",
   "api.errors.histoicalCoinPriceError": "Geçmiş kripto para fiyat verileri şu anda mevcut değil.",
   "api.errors.invalidMnemonicError": "Geçersiz kurtarma sözcüğü girildi, lütfen kontrol edin.",
   "api.errors.invalidWitnessError": "İmza geçersiz.",
@@ -204,7 +204,7 @@
   "settings.general.aboutYoroi.versionLabel": "Geçerli sürüm:",
   "settings.general.aboutYoroi.website": "Yoroi web sitesi",
   "settings.general.aboutYoroi.youtube": "EMURGO YouTube",
-  "settings.general.explorer": "Blockchain Ağı",
+  "settings.general.explorer": "Blockchain Gezgini",
   "settings.general.languageSelect.info": "EMURGO için Yoroi'deki dostluk önemli bir konudur. Anadilinizde blockchain kavramlarını anlamanın daha kolay olduğuna inanıyoruz. Mümkün olduğunca çok dili desteklemeye çalışıyoruz, ancak daha geniş bir dil seçimi için topluluk çevirmenlerinin yardımını kabul etmeliyiz. Seçilen dil çevirisi topluluk tarafından eksiksiz bir şekilde sağlanır.",
   "settings.general.languageSelect.labelInfo": "Seçilen dil çevirisi topluluk tarafından eksiksiz bir şekilde sağlanır",
   "settings.general.translation.acknowledgment": "Katkılarından dolayı aşağıdakilere teşekkür ederiz: ",
@@ -260,7 +260,7 @@
   "settings.support.logs.downloadLogsLink": "buradan indirebilirsiniz",
   "settings.support.logs.title": "Kayıtlar",
   "settings.support.reportProblem.content": "Eğer SSS bölümü, sorununuzu çözemiyorsa, lütfen {supportRequestLink} bölümünü kullanın.",
-  "settings.support.reportProblem.link": "Destek talebi",
+  "settings.support.reportProblem.link": "Destek",
   "settings.support.reportProblem.title": "Sorun bildir",
   "settings.unitOfAccount.currency.btc": "Bitcoin",
   "settings.unitOfAccount.currency.cny": "Çin Yuanı",
@@ -282,8 +282,8 @@
   "transfer.form.masterkey.input.hint": "Ana anahtarı giriniz",
   "transfer.form.masterkey.input.label": "Ana anahtar",
   "transfer.form.masterkey.requirement": "Not: kodlama anahtarları 192 karakter ve onaltılık kodludur",
-  "transfer.instructions.attention.legacy": "Byron-döneminde (29 Kasım 2019 tarihinden önce) oluşturulan eski cüzdanlar artık kullanılamaz. Ancak, paranıza erişmek için eski paranızı mevcut cüzdanınıza aktarabilirsiniz.",
   "transfer.instructions.attention.title.label": "Dikkat",
+  "transfer.instructions.fee.source.disclaimer": "The transaction fee to claim funds will be paid by the wallet you currently have selected.",
   "transfer.instructions.hardware.disclaimer.checkbox": "Donanım cüzdanımın kurtarma sözcüklerini girmenin önemli bir risk taşıdığını kabul ediyorum.",
   "transfer.instructions.hardware.disclaimer.instructions1": "Başlangıçta donanım cüzdanınızı oluşturduğunuzda, bir kağıda bir kurtarma sözcükleri yazmanız istenecektir. Bu söcükleri girmek, paranızı donanım cüzdanınızdan mevcut cüzdanınıza aktarmanıza izin verecektir.",
   "transfer.instructions.hardware.disclaimer.instructions2": "Bu özelliği kullanırsanız, donanım cüzdanınız için yeni bir kurtarma sözcüğü oluşturmalısınız. Bunu neden veya nasıl yapacağınızı bilmiyorsanız, bu özelliği kullanmanızı önermiyoruz.",
@@ -293,8 +293,9 @@
   "transfer.legacy.daedalus.12word": "12-kelime Daedalus Cüzdan",
   "transfer.legacy.daedalus.title": "Eski Daedalus Cüzdan",
   "transfer.legacy.icarus.title": "Icarus/Yoroi Cüzdan",
+  "transfer.rewards.paper.label": "Rewards from paper wallet",
+  "transfer.rewards.regular.label": "Rewards from recovery phrase",
   "transfer.summary.addressFrom.label": "İtibaren",
-  "transfer.summary.addressTo.label": "İçin",
   "transfer.summary.finalBalance.label": "Son bakiye",
   "transfer.summary.recoveredBalance.label": "Kurtarılan bakiye",
   "transfer.summary.transactionFee.label": "İşlem ücretleri",
@@ -350,6 +351,7 @@
   "wallet.address.category.byron": "Byron-era adres biçimi kullanılarak oluşturulan adresler",
   "wallet.address.category.group": "Bir harcama anahtarı ve bir bahis anahtarı kombinasyonu ile oluşturulan adresler",
   "wallet.address.category.p2pk": "Doğrudan bir ortak anahtardan oluşturulan adresler",
+  "wallet.address.category.reward": "Address for your staking key",
   "wallet.amountInput.feesLabel": "+ {amount} ücret",
   "wallet.backup.dialog.legacy.checkConfirm": "Cüzdanınızın yükseltilmesi gerekip gerekmediğini kontrol etmek ister misiniz?",
   "wallet.backup.dialog.legacy.explanation": "29 Kasım 2019 tarihinde cüzdanınızda ADA varsa,\n    cüzdanınızı Shelley \"ödül cüzdanı\"na yükseltmeniz gerekir.",
@@ -410,7 +412,7 @@
   "wallet.currency.pick.cardano": "Cardano, hisse ispatının ilk kanıtlanabilir protokolüdür",
   "wallet.currency.pick.ergo": "Ergo, on yıllık blockchain teorisi ve gelişiminin getirdiği çok sağlam temeller üzerinde gelişmiş şifreleme özellikleri ve radikal olarak yeni DeFi işlevselliği oluşturuyor",
   "wallet.currency.pick.header": "Bir para birimi veya platform seçin",
-  "wallet.dashboard.empty.text": "Go to the delegation page to choose what stake pool you want to delegate in.",
+  "wallet.dashboard.empty.text": "Hangi stake havuzunda yetki vermek istediğinizi seçmek için temsilci sayfasına gidin.",
   "wallet.dashboard.empty.title": "ADA'nızı henüz devretmediniz",
   "wallet.dashboard.epochEndTitle": "Dönem sonuna kadar geçen süre",
   "wallet.dashboard.epochProgress": "Dönem gelişimi",
@@ -491,13 +493,15 @@
   "wallet.nav.type.paper": "Kağıt cüzdan",
   "wallet.nav.type.standard": "Standart cüzdan",
   "wallet.nav.type.trezor": "Trezor cüzdan",
+  "wallet.navigation.delegationById": "Delegation by Id",
   "wallet.navigation.delegationDashboard": "Kontrol Paneli",
-  "wallet.navigation.delegationSimple": "Delegasyon",
-  "wallet.navigation.receive": "Alıcı",
+  "wallet.navigation.delegationList": "Delegation List",
+  "wallet.navigation.receive": "Al",
   "wallet.navigation.send": "Gönder",
   "wallet.navigation.transactions": "İşlemler",
   "wallet.nowallet.subtitle": "Lütfen sağ-üst açılır menüden bir cüzdan seçin",
   "wallet.nowallet.title": "Cüzdan seçilmedi",
+  "wallet.problematic.explanation1": "The wallet you selected ({checksumTextPart}) was detected to contain some kind of issue.",
   "wallet.receive.confirmationDialog.addressDetailsTitleLabel": "Adresi doğrula",
   "wallet.receive.confirmationDialog.addressLabel": "Adres",
   "wallet.receive.confirmationDialog.addressesLabel": "Adresler",
@@ -513,6 +517,7 @@
   "wallet.receive.navigation.groupLabel": "Grup",
   "wallet.receive.navigation.hasBalanceLabel": "Bakiyeniz",
   "wallet.receive.navigation.p2pkLabel": "P2PK",
+  "wallet.receive.navigation.rewardLabel": "Reward",
   "wallet.receive.navigation.unusedLabel": "Kullanılmamış",
   "wallet.receive.navigation.usedLabel": "Kullanılmış",
   "wallet.receive.page.copyAddressLabel": "Adresi kopyala",
@@ -526,6 +531,8 @@
   "wallet.receive.page.noResultsFoundLabel": "Bir sonuç bulunamadı",
   "wallet.receive.page.notFoundAnyAddresses": "Filtrenize uyan herhangi bir adres bulunamadı.",
   "wallet.receive.page.outputAmountUTXO": "Bakiye (UTXO mik)",
+  "wallet.receive.page.rewardAddressLine1": "Your reward address holds your rewards and is used to validate any changes to your delegation preference",
+  "wallet.receive.page.rewardAddressLine2": "You cannot send ADA to reward addresses, but we show it for personal auditing purposes",
   "wallet.receive.page.unmangeLabel": "Yetkilendirme tercihini düzeltiniz",
   "wallet.receive.page.verifyAddressLabel": "Adresi doğrula",
   "wallet.receive.page.walletAddressLabel": "Cüzdan adresiniz",
@@ -609,7 +616,6 @@
   "wallet.settings.unchangedPassword": "Cüzdan oluşturulduğundan beri şifre değişmedi",
   "wallet.staking.pool.unknownLabel": "Bilinmeyen havuz",
   "wallet.staking.warning.pendingTx": "Bekleyen bir işlem sırasında yetkilendirme seçme tercihinizi değiştiremezsiniz",
-  "wallet.staking.warning.title": "Yetkilendirme geçici olarak devre dışı bırakıldı",
   "wallet.summary.no.transaction": "İşlem bulunamadı",
   "wallet.summary.page.dateTime": "Tarih/saat",
   "wallet.summary.page.integratedNotificationMessage": "{deviceName} ile başarıyla entegre oldunuz",
@@ -632,15 +638,15 @@
   "wallet.transaction.assuranceLevel.high": "yüksek",
   "wallet.transaction.assuranceLevel.low": "düşük",
   "wallet.transaction.assuranceLevel.medium": "orta",
-  "wallet.transaction.certificate.GenesisKeyDelegation": "Genesis key delegation",
-  "wallet.transaction.certificate.MoveInstantaneousRewardsCert": "Manually-initiated reward payout",
+  "wallet.transaction.certificate.GenesisKeyDelegation": "Genesis anahtar yetkilendirme",
+  "wallet.transaction.certificate.MoveInstantaneousRewardsCert": "Manuel olarak başlatılan ödül ödemesi",
   "wallet.transaction.certificate.OwnerStakeDelegation": "Hisse sahibi delegasyonu",
   "wallet.transaction.certificate.PoolRegistration": "Havuz kayıt",
   "wallet.transaction.certificate.PoolRetirement": "Havuz emekliliği",
   "wallet.transaction.certificate.PoolUpdate": "Havuz güncellemesi",
   "wallet.transaction.certificate.StakeDelegation": "Bahis heyeti",
-  "wallet.transaction.certificate.StakeDeregistration": "Staking key deregistration",
-  "wallet.transaction.certificate.StakeRegistration": "Staking key registration",
+  "wallet.transaction.certificate.StakeDeregistration": "Stake anahtar kaydı silme",
+  "wallet.transaction.certificate.StakeRegistration": "Stake anahtarı kaydı",
   "wallet.transaction.certificateLabel": "Sertifika",
   "wallet.transaction.certificatesLabel": "Sertifikalar",
   "wallet.transaction.confirmations": "onaylama",
@@ -665,13 +671,15 @@
   "wallet.transaction.type.exchange": "Kur",
   "wallet.transaction.type.intrawallet": "{currency} cüzdan içi işlem",
   "wallet.transaction.type.multiparty": "{currency} çok parçalı işlem",
+  "wallet.transaction.withdrawalsLabel": "Çekim",
   "wallet.transfer.cards.byron": "Byron-era cüzdan",
-  "wallet.transfer.cards.shelleyItn": "Shelley testnet",
+  "wallet.transfer.cards.shelley": "Shelley-era wallet",
   "wallet.transfer.instruction": "Talep edilen ADA seçili olan cüzdanınıza aktarılacaktır",
   "wallet.undelegation.transaction.explanationLine1": "Bahis havuzlarını değiştirmeden önce yetkilendirmenizi kaldırmanız GEREKMEZ",
   "wallet.undelegation.transaction.explanationLine2": "Yetkilendirmenin yürürlüğe girmesi, mevcut dönemin sona ermesinden sonra 2 dönem alacaktır",
   "wallet.unsupported.subtitle": "Seçilen cüzdan bu işlevi desteklemiyor",
   "wallet.unsupported.title": "Cüzdan türü desteklenmiyor",
+  "wallet.withdrawal.transaction.unregister": "This transaction will unregister one or more staking keys, giving you back your {refundAmount} ADA from your deposit",
   "widgets.copyableaddress.addressCopyTooltipMessage": "Panoya kopyala",
   "widgets.explorer.tooltip": "{websiteName} Adresine Git",
   "widgets.warningBox.headerText": "DİKKAT:",
@@ -689,7 +697,6 @@
   "yoroiTransfer.start.instructions.yoroiPaper": "Yoroi kağıt cüzdan",
   "yoroiTransfer.successPage.text": "Varlıklarınız başarıyla aktarıldı.",
   "yoroiTransfer.successPage.title": "Başarılı",
-  "yoroiTransfer.summary.addressFrom.subLabel": "Cüzdan Adresleri",
   "yoroiTransfer.waiting.checkingAddresses.generatingTx": "Transfer işlemi oluşturuluyor",
   "yoroiTransfer.waiting.progressInfo.checkingAddresses": "Adreslerdeki para kontrol ediliyor",
   "yoroiTransfer.waiting.progressInfo.restoringAddresses": "Adresler getiriliyor",
