--- a/app/i18n/locales/de-DE.json
+++ b/app/i18n/locales/de-DE.json
@@ -25,7 +25,7 @@
   "api.errors.getTxsBodiesForUTXOsError": "Fehler von der API beim Abrufen der TxBodies.",
   "api.errors.getUtxosForAddressesApiError": "Fehler vom Server beim Abrufen der UTxOs.",
   "api.errors.getUtxosSumsForAddressesApiError": "Fehler vom Server beim Abrufen der Kontostände.",
-  "api.errors.hardwareUnsupportedError": "Diese Hardware Wallet wird derzeit nicht unterstützt.",
+  "api.errors.hardwareUnsupportedError": "Diese Aktion ist mit der derzeit ausgewählten Hardware nicht unterstützt.",
   "api.errors.histoicalCoinPriceError": "Der historische Kursverkauf ist derzeit nicht verfügbar.",
   "api.errors.invalidMnemonicError": "Do not translate.",
   "api.errors.invalidWitnessError": "Die Signatur ist ungültig.",
@@ -282,8 +282,8 @@
   "transfer.form.masterkey.input.hint": "Generalschlüssel eingeben",
   "transfer.form.masterkey.input.label": "Generalschlüssel",
   "transfer.form.masterkey.requirement": "Hinweis: Generalschlüssel sind 192 Zeichen lang und hexadezimal-verschlüsselt",
-  "transfer.instructions.attention.legacy": "Legacy Wallets, die während der Byron-Zeit (vor dem 29. November 2019) erstellt wurden, können nicht mehr verwendet werden. Du kannst jedoch deine alten Geldwerte in Deine aktuelle Wallet übertragen, um darauf zuzugreifen.",
   "transfer.instructions.attention.title.label": "Achtung",
+  "transfer.instructions.fee.source.disclaimer": "Die Transaktionsgebühr zum Abrufen der Erträge wird von der aktuell ausgewählten Wallet bezahlt.",
   "transfer.instructions.hardware.disclaimer.checkbox": "Ich erkenne an, dass die Eingabe des Wiederherstellungssatzes meiner Hardware-Wallet ein erhebliches Risiko birgt.",
   "transfer.instructions.hardware.disclaimer.instructions1": "Bei der ursprünglichen Einrichtung Deiner Hardware-wallet wurdest Du gebeten, einen Wiederherstellungssatz auf ein Blatt Papier zu schreiben. Wenn Du diesen Satz eingibst, kannst Du dein Geld aus deiner Hardware-Brieftasche in die aktuelle Brieftasche übertragen.",
   "transfer.instructions.hardware.disclaimer.instructions2": "Wenn Du diese Funktion verwendest, solltest Du eine neue Wiederherstellungsphrase für Deine Hardware-Wallet erstellen. Wenn Du nicht weißt, warum oder wie dies tun, empfehlen wir Dir diese Funktion nicht zu verwenden.",
@@ -293,8 +293,9 @@
   "transfer.legacy.daedalus.12word": "12-Wort Daedalus wallet",
   "transfer.legacy.daedalus.title": "Altes Daedalus wallet",
   "transfer.legacy.icarus.title": "Icarus/Yoroi Wallet",
+  "transfer.rewards.paper.label": "Erträge von Paper-wallet",
+  "transfer.rewards.regular.label": "Erträge vom Wiederherstellungssatz",
   "transfer.summary.addressFrom.label": "Von",
-  "transfer.summary.addressTo.label": "An",
   "transfer.summary.finalBalance.label": "Endsaldo",
   "transfer.summary.recoveredBalance.label": "Wiederhergestellter Kontostand",
   "transfer.summary.transactionFee.label": "Transaktionsgebühren",
@@ -350,6 +351,7 @@
   "wallet.address.category.byron": "Adressen, die mit dem Adressformat der Byron-Ära erstellt wurden",
   "wallet.address.category.group": "Adressen, die durch die Kombination eines Ausgabe- und eines Staking-Schlüssels gebildet wurden",
   "wallet.address.category.p2pk": "Adressen, die direkt aus einem öffentlichen Schlüssel generiert werden",
+  "wallet.address.category.reward": "Adresse deines Staking Schlüssels",
   "wallet.amountInput.feesLabel": "+ {amount} an Gebühren",
   "wallet.backup.dialog.legacy.checkConfirm": "Möchtest Du prüfen, ob Deine Wallet aufgerüstet werden muss?",
   "wallet.backup.dialog.legacy.explanation": "Wenn Du am 29. November 2019 ADA in deiner Brieftasche hattest\n    muss Deine Wallet zu einer Shelley \"reward wallet\" aufgerüstet werden.",
@@ -491,13 +493,15 @@
   "wallet.nav.type.paper": "Papier Wallet",
   "wallet.nav.type.standard": "Standard Wallet",
   "wallet.nav.type.trezor": "Trezor Wallet",
+  "wallet.navigation.delegationById": "ID-basierte Delegierung",
   "wallet.navigation.delegationDashboard": "Übersichtsseite",
-  "wallet.navigation.delegationSimple": "Delegierung",
+  "wallet.navigation.delegationList": "Delegierungsliste",
   "wallet.navigation.receive": "Empfangen",
   "wallet.navigation.send": "Senden",
   "wallet.navigation.transactions": "Transaktionen",
   "wallet.nowallet.subtitle": "Bitte wähle rechts oben aus der Liste eine Wallet",
   "wallet.nowallet.title": "Keine Wallet ausgewählt",
+  "wallet.problematic.explanation1": "Die ausgewählte Wallet ({checksumTextPart}) scheint ein Problem zu haben.",
   "wallet.receive.confirmationDialog.addressDetailsTitleLabel": "Adressprüfung",
   "wallet.receive.confirmationDialog.addressLabel": "Adresse",
   "wallet.receive.confirmationDialog.addressesLabel": "Addressen",
@@ -513,6 +517,7 @@
   "wallet.receive.navigation.groupLabel": "Gruppe",
   "wallet.receive.navigation.hasBalanceLabel": "Hat Saldo",
   "wallet.receive.navigation.p2pkLabel": "P2PK",
+  "wallet.receive.navigation.rewardLabel": "Ertrag",
   "wallet.receive.navigation.unusedLabel": "Unbenutzt",
   "wallet.receive.navigation.usedLabel": "Benutzt",
   "wallet.receive.page.copyAddressLabel": "Adresse kopieren",
@@ -526,6 +531,8 @@
   "wallet.receive.page.noResultsFoundLabel": "Keine Ergebnisse gefunden",
   "wallet.receive.page.notFoundAnyAddresses": "Keine Adresse gefunden der diesem Filter entspricht.",
   "wallet.receive.page.outputAmountUTXO": "Saldo (UTXO Summe)",
+  "wallet.receive.page.rewardAddressLine1": "Deine Ertragsadresse enthält deine Erträge und wird zum Überprüfen von Änderungen deiner Delegation verwendet",
+  "wallet.receive.page.rewardAddressLine2": "Du kannst keine ADA an Ertragsadressen schicken. Wir zeigen sie nur für persönliche Überprüfungen an",
   "wallet.receive.page.unmangeLabel": "Korrigiere die Delegationseinstellung",
   "wallet.receive.page.verifyAddressLabel": "Überprüfe die Adresse",
   "wallet.receive.page.walletAddressLabel": "Deine Wallet-Adresse",
@@ -609,7 +616,6 @@
   "wallet.settings.unchangedPassword": "Das Kennwort wurde seit der Wallet-Erstellung noch nie geändert",
   "wallet.staking.pool.unknownLabel": "Unbekannter pool",
   "wallet.staking.warning.pendingTx": "Du kannst Deine Delegationspräferenz nicht ändern, während eine Transaktion ausstehend ist",
-  "wallet.staking.warning.title": "Delegierung vorübergehend deaktiviert",
   "wallet.summary.no.transaction": "Keine Transaktionen gefunden",
   "wallet.summary.page.dateTime": "Datum/Uhrzeit",
   "wallet.summary.page.integratedNotificationMessage": "Dein {deviceName} wurde erfolgreich integriert",
@@ -665,13 +671,15 @@
   "wallet.transaction.type.exchange": "Börse",
   "wallet.transaction.type.intrawallet": "{currency} interne Wallet-Transaktion",
   "wallet.transaction.type.multiparty": "{currency} mehrfach-Teilnehmer Transaktion",
+  "wallet.transaction.withdrawalsLabel": "Auszahlungen",
   "wallet.transfer.cards.byron": "Byron-Ära wallet",
-  "wallet.transfer.cards.shelleyItn": "Shelley testnet",
+  "wallet.transfer.cards.shelley": "Shelley-Ära wallet",
   "wallet.transfer.instruction": "Alle beantragten ADA werden in die gerade ausgewählte Wallet übertragen",
   "wallet.undelegation.transaction.explanationLine1": "Du musst NICHT undelegieren bevor Du zu einem anderen Stake pool wechselst",
   "wallet.undelegation.transaction.explanationLine2": "Es wird nach dem Ende der aktuellen Epoche 2 weitere Epochen dauern bis die Undelegierung effektiv wird",
   "wallet.unsupported.subtitle": "Diese Funktion wird von der ausgewählten Wallet nicht unterstützt",
   "wallet.unsupported.title": "Nicht unterstützer Wallet typ",
+  "wallet.withdrawal.transaction.unregister": "Diese Transaktion wird eine oder mehrere Staking Schlüssel zurückziehen, und Dir {refundAmount} ADA zurückgeben",
   "widgets.copyableaddress.addressCopyTooltipMessage": "In die Zwischenablage kopieren",
   "widgets.explorer.tooltip": "Gehe zu {websiteName}",
   "widgets.warningBox.headerText": "ACHTUNG:",
@@ -689,7 +697,6 @@
   "yoroiTransfer.start.instructions.yoroiPaper": "Yoroi paper wallet",
   "yoroiTransfer.successPage.text": "Dein Guthaben wurde erfolgreich übertragen.",
   "yoroiTransfer.successPage.title": "Erfolg",
-  "yoroiTransfer.summary.addressFrom.subLabel": "Wallet-Adresse",
   "yoroiTransfer.waiting.checkingAddresses.generatingTx": "Generiere die Übertragungs-Transaktion",
   "yoroiTransfer.waiting.progressInfo.checkingAddresses": "Überprüfe den Kontostand der Adressen",
   "yoroiTransfer.waiting.progressInfo.restoringAddresses": "Adressen werden abgerufen",
