--- a/app/i18n/locales/es-ES.json
+++ b/app/i18n/locales/es-ES.json
@@ -25,7 +25,7 @@
   "api.errors.getTxsBodiesForUTXOsError": "Error recibido de la llamada a la API al intentar obtener los TxBodies.",
   "api.errors.getUtxosForAddressesApiError": "Error recibido del servidor al obtener los UTxOs.",
   "api.errors.getUtxosSumsForAddressesApiError": "Error recibido del servidor al obtener el saldo.",
-  "api.errors.hardwareUnsupportedError": "Por el momento, esta billetera de hardware no está soportada.",
+  "api.errors.hardwareUnsupportedError": "Esta acción no está soportada para el hardware seleccionado.",
   "api.errors.histoicalCoinPriceError": "Los datos históricos sobre el precio de la moneda no están disponibles en este momento.",
   "api.errors.invalidMnemonicError": "La frase de recuperación ingresada es inválida. Por favor, verifica que sea la correcta.",
   "api.errors.invalidWitnessError": "La firma es inválida.",
@@ -208,7 +208,7 @@
   "settings.general.languageSelect.info": "Para EMURGO, la familiaridad en Yoroi es un tema importante. Creemos que entender los conceptos de la blockchain es más fácil en tu idioma nativo. Intentamos apoyar tantos idiomas como sea posible, pero para una selección más amplia de idiomas necesitamos aceptar la ayuda de traductores de la comunidad. La traducción del idioma seleccionado es proporcionada en su totalidad por la comunidad.",
   "settings.general.languageSelect.labelInfo": "La traducción del idioma elegido es proporcionada en su totalidad por la comunidad",
   "settings.general.translation.acknowledgment": "Gracias a los siguientes miembros por su contribución: ",
-  "settings.general.translation.contributors": "Sebastián Videmato, Rodrigo [RODRI/CAZ]",
+  "settings.general.translation.contributors": "Rodrigo [RODRI/CAZ], Seba",
   "settings.menu.blockchain.link.label": "Blockchain",
   "settings.menu.externalStorage.link.label": "Almacenamiento de memos",
   "settings.menu.general.link.label": "General",
@@ -282,8 +282,8 @@
   "transfer.form.masterkey.input.hint": "Ingresa la clave maestra",
   "transfer.form.masterkey.input.label": "Clave Maestra",
   "transfer.form.masterkey.requirement": "Nota: Las claves maestras tienen 192 caracteres, y están codificadas hexadecimalmente",
-  "transfer.instructions.attention.legacy": "Las billeteras antiguas creadas durante la era Byron (antes del 29 de noviembre de 2019) ya no se pueden utilizar. Sin embargo, puedes transferir los fondos antiguos a tu billetera actual para acceder a ellos.",
   "transfer.instructions.attention.title.label": "Atención",
+  "transfer.instructions.fee.source.disclaimer": "La comisión de transacción para reclamar los fondos será pagada por la billetera actualmente seleccionada.",
   "transfer.instructions.hardware.disclaimer.checkbox": "Reconozco que ingresar la frase de recuperación de mi billetera de hardware implica un riesgo considerable.",
   "transfer.instructions.hardware.disclaimer.instructions1": "Cuando originalmente configuraste tu billetera de hardware, se te solicitó que escribieras una frase de recuperación en una hoja de papel. Ingresar esa frase te permitirá transferir tus fondos desde tu billetera de hardware a la billetera actual.",
   "transfer.instructions.hardware.disclaimer.instructions2": "Si utilizas esta opción, te recomendamos generar una nueva frase de recuperación para tu billetera de hardware. Si no sabes por qué o cómo hacerlo, no te recomendamos que utilices esta opción.",
@@ -293,8 +293,9 @@
   "transfer.legacy.daedalus.12word": "12 palabras de la billetera Daedalus",
   "transfer.legacy.daedalus.title": "Billetera Daedalus Antigua",
   "transfer.legacy.icarus.title": "Billetera Icarus/Yoroi",
+  "transfer.rewards.paper.label": "Recompensas de la billetera de papel",
+  "transfer.rewards.regular.label": "Recompensas a partir de la frase de recuperación",
   "transfer.summary.addressFrom.label": "Desde",
-  "transfer.summary.addressTo.label": "Para",
   "transfer.summary.finalBalance.label": "Saldo resultante",
   "transfer.summary.recoveredBalance.label": "Saldo recuperado",
   "transfer.summary.transactionFee.label": "Comisiones por transacción",
@@ -350,6 +351,7 @@
   "wallet.address.category.byron": "Direcciones creadas con el formato de direcciones de la era Byron",
   "wallet.address.category.group": "Direcciones formadas por la combinación de una contraseña de gastos y una clave de delegación",
   "wallet.address.category.p2pk": "Direcciones generadas directamente a partir de una clave pública",
+  "wallet.address.category.reward": "La dirección de la clave de delegación",
   "wallet.amountInput.feesLabel": "+ {amount} ADA de comisión",
   "wallet.backup.dialog.legacy.checkConfirm": "¿Deseas comprobar si tu billetera necesita ser actualizada?",
   "wallet.backup.dialog.legacy.explanation": "Si tenías ADA en tu billetera el 29 de noviembre de 2019, tienes que actualizar tu billetera a una \"billetera de recompensas\" de Shelley.",
@@ -491,13 +493,15 @@
   "wallet.nav.type.paper": "Billetera de Papel",
   "wallet.nav.type.standard": "Billetera estándar",
   "wallet.nav.type.trezor": "Dispositivo Trezor",
+  "wallet.navigation.delegationById": "Delegation by Id",
   "wallet.navigation.delegationDashboard": "Seguimiento",
-  "wallet.navigation.delegationSimple": "Delegación",
+  "wallet.navigation.delegationList": "Delegation List",
   "wallet.navigation.receive": "Recibir",
   "wallet.navigation.send": "Enviar",
   "wallet.navigation.transactions": "Transacciones",
   "wallet.nowallet.subtitle": "Por favor, elige una billetera del menú desplegable ubicado en la parte superior derecha de la pantalla",
   "wallet.nowallet.title": "No has seleccionado ninguna billetera",
+  "wallet.problematic.explanation1": "La billetera seleccionada ({checksumTextPart}) se detectó que posee algún tipo de problema.",
   "wallet.receive.confirmationDialog.addressDetailsTitleLabel": "Verifica la dirección",
   "wallet.receive.confirmationDialog.addressLabel": "Dirección",
   "wallet.receive.confirmationDialog.addressesLabel": "Direcciones",
@@ -513,6 +517,7 @@
   "wallet.receive.navigation.groupLabel": "Grupo",
   "wallet.receive.navigation.hasBalanceLabel": "Tiene saldo",
   "wallet.receive.navigation.p2pkLabel": "P2PK",
+  "wallet.receive.navigation.rewardLabel": "Recompensa",
   "wallet.receive.navigation.unusedLabel": "No usado",
   "wallet.receive.navigation.usedLabel": "Usado",
   "wallet.receive.page.copyAddressLabel": "Copiar dirección",
@@ -526,6 +531,8 @@
   "wallet.receive.page.noResultsFoundLabel": "No se encontraron resultados",
   "wallet.receive.page.notFoundAnyAddresses": "No pudimos encontrar ninguna dirección que coincida con tu búsqueda.",
   "wallet.receive.page.outputAmountUTXO": "Saldo (sumarización del UTxO)",
+  "wallet.receive.page.rewardAddressLine1": "Su dirección de recompensa contiene sus recompensas y se utiliza para validar cualquier cambio en su preferencia de delegación",
+  "wallet.receive.page.rewardAddressLine2": "No puedes enviar ADA a direcciones de recompensa, pero la mostramos para propósitos de auditoría personal",
   "wallet.receive.page.unmangeLabel": "Corregir la preferencia de delegación",
   "wallet.receive.page.verifyAddressLabel": "Verifica la dirección",
   "wallet.receive.page.walletAddressLabel": "Dirección de tu billetera",
@@ -609,7 +616,6 @@
   "wallet.settings.unchangedPassword": "Contraseña sin cambios desde la creación de la billetera",
   "wallet.staking.pool.unknownLabel": "Pool desconocido",
   "wallet.staking.warning.pendingTx": "No puedes cambiar tu preferencia de delegación mientras una transacción se encuentra pendiente",
-  "wallet.staking.warning.title": "Delegación temporalmente desactivada",
   "wallet.summary.no.transaction": "No se han encontrado transacciones",
   "wallet.summary.page.dateTime": "Fecha/hora",
   "wallet.summary.page.integratedNotificationMessage": "Se ha integrado con éxito a tu {deviceName}",
@@ -665,13 +671,15 @@
   "wallet.transaction.type.exchange": "Exchange",
   "wallet.transaction.type.intrawallet": "{currency} transacción intra-billetera",
   "wallet.transaction.type.multiparty": "{currency} transacción multipartita",
+  "wallet.transaction.withdrawalsLabel": "Retiros",
   "wallet.transfer.cards.byron": "Billetera de la era Byron",
-  "wallet.transfer.cards.shelleyItn": "Red de Prueba de Shelley",
+  "wallet.transfer.cards.shelley": "Billetera de la era Shelley",
   "wallet.transfer.instruction": "Toda ADA reclamada será transferida a la billetera actualmente seleccionada",
   "wallet.undelegation.transaction.explanationLine1": "NO es necesario que canceles la delegación antes de cambiar de stake pool",
   "wallet.undelegation.transaction.explanationLine2": "Tomará 2 epochs, a partir del final del epoch actual, para que la des-delegación se haga efectiva",
   "wallet.unsupported.subtitle": "La billetera seleccionada no soporta esta funcionalidad",
   "wallet.unsupported.title": "Tipo de billetera no soportada",
+  "wallet.withdrawal.transaction.unregister": "Esta transacción anulará una o más claves de delegación, devolviéndote tus {refundAmount} ADA de tu depósito",
   "widgets.copyableaddress.addressCopyTooltipMessage": "Copiar al portapapeles",
   "widgets.explorer.tooltip": "Ir a {websiteName}",
   "widgets.warningBox.headerText": "ATENCIÓN:",
@@ -689,7 +697,6 @@
   "yoroiTransfer.start.instructions.yoroiPaper": "Billetera de papel de Yoroi",
   "yoroiTransfer.successPage.text": "Tus fondos fueron transferidos con éxito.",
   "yoroiTransfer.successPage.title": "éxito",
-  "yoroiTransfer.summary.addressFrom.subLabel": "Direcciones de la billetera",
   "yoroiTransfer.waiting.checkingAddresses.generatingTx": "Generando transacción de transferencia",
   "yoroiTransfer.waiting.progressInfo.checkingAddresses": "Verificando los fondos de las direcciones",
   "yoroiTransfer.waiting.progressInfo.restoringAddresses": "Obteniendo direcciones",
