--- a/app/i18n/locales/fr-FR.json
+++ b/app/i18n/locales/fr-FR.json
@@ -25,13 +25,13 @@
   "api.errors.getTxsBodiesForUTXOsError": "Erreur reçue de l'Api lors de l'appel de TxBodies.",
   "api.errors.getUtxosForAddressesApiError": "Erreur reçue du serveur lors de l'appel de UTxOs.",
   "api.errors.getUtxosSumsForAddressesApiError": "Erreur reçue du serveur lors de l'appel du solde.",
-  "api.errors.hardwareUnsupportedError": "Ce portefeuille hardware n'est actuellement pas accepté.",
+  "api.errors.hardwareUnsupportedError": "Cette action n'est pas prise en charge pour le matériel actuellement sélectionné.",
   "api.errors.histoicalCoinPriceError": "L'historique du cours de ce jeton n'est pas disponible en ce moment.",
   "api.errors.invalidMnemonicError": "do not translate",
   "api.errors.invalidWitnessError": "La signature n’est pas valide.",
   "api.errors.noInputsError": "Le wallet restauré à partir de votre phrase de secours est vide. Veuillez vérifier votre phrase de secours and retenter de restaurer le wallet.",
   "api.errors.pendingTransactionError": "Erreur lors de la mise à jour des transactions en cours.",
-  "api.errors.poolMissingApiError": "Could not find this pool. Double-check the ID and make sure the pool was not deregistered.",
+  "api.errors.poolMissingApiError": "Nous n'avons pas pu trouver ce groupe d'enjeu. Veuillez vérifier l'identifiant (ID) et assurez-vous qu'il ne s'est pas désinscrit.",
   "api.errors.rollbackApiError": "Un retour en arrière a été détecté.",
   "api.errors.sendTransactionApiError": "Erreur reçue du serveur lors de l'envoi de la transaction.",
   "api.errors.sendTransactionError": "Erreur reçue de l'API lors de l'envoi de la transaction.",
@@ -282,8 +282,8 @@
   "transfer.form.masterkey.input.hint": "Entrez la clé maître",
   "transfer.form.masterkey.input.label": "Clé maître",
   "transfer.form.masterkey.requirement": "Remarque : les clés maîtres sont composées de 192 caractères encodés en hexadécimal",
-  "transfer.instructions.attention.legacy": "Les portefeuilles anciens créés à l'époque Byron (avant le 29 novembre 2019) ne peuvent plus être utilisés. Toutefois, vous pouvez transférer vos anciens fonds dans votre portefeuille actuel pour avoir accès à vos fonds.",
   "transfer.instructions.attention.title.label": "Attention",
+  "transfer.instructions.fee.source.disclaimer": "Les frais de transaction pour récupérer les fonds seront payés par le wallet que vous avez actuellement sélectionné.",
   "transfer.instructions.hardware.disclaimer.checkbox": "Je reconnais qu'entrer dans la phrase de récupération de mon wallet matériel comporte un risque important.",
   "transfer.instructions.hardware.disclaimer.instructions1": "Lors de la configuration initiale de votre wallet matériel, il vous a été demandé d'écrire une phrase de récupération sur un morceau de papier. En entrant cette phrase, vous pourrez transférer vos fonds de votre wallet matériel vers le wallet actuel.",
   "transfer.instructions.hardware.disclaimer.instructions2": "Si vous utilisez cette fonctionnalité, vous devriez générer une nouvelle phrase de récupération pour votre wallet matériel. Si vous ne savez pas pourquoi ou comment le faire, nous vous recommandons de ne pas utiliser cette fonctionnalité.",
@@ -293,8 +293,9 @@
   "transfer.legacy.daedalus.12word": "Wallet Daedalus de 12 mots",
   "transfer.legacy.daedalus.title": "Wallet Daedalus Legacy",
   "transfer.legacy.icarus.title": "Wallet Icarus/Yoroi",
+  "transfer.rewards.paper.label": "Récompenses de wallet papier",
+  "transfer.rewards.regular.label": "Récompenses de la phrase de secours",
   "transfer.summary.addressFrom.label": "De",
-  "transfer.summary.addressTo.label": "À",
   "transfer.summary.finalBalance.label": "Solde final",
   "transfer.summary.recoveredBalance.label": "Solde recouvert",
   "transfer.summary.transactionFee.label": "Frais de transaction",
@@ -350,6 +351,7 @@
   "wallet.address.category.byron": "Adresses créées en utilisant le format d'adresse de l'ère Byron",
   "wallet.address.category.group": "Adresses formées par la combinaison d'une clé de dépense et d'une clé de mise",
   "wallet.address.category.p2pk": "Adresses générées directement à partir d'une clé publique",
+  "wallet.address.category.reward": "Adresse pour votre clé de staking",
   "wallet.amountInput.feesLabel": "+ {amount} de frais de transaction",
   "wallet.backup.dialog.legacy.checkConfirm": "Voulez-vous vérifier si votre portefeuille a besoin d'être mis à jour ?",
   "wallet.backup.dialog.legacy.explanation": "Si vous aviez ADA dans votre portefeuille le 29 novembre 2019 vous devez remplacer votre portefeuille par un \"portefeuille de récompense\" Shelley.",
@@ -410,7 +412,7 @@
   "wallet.currency.pick.cardano": "Cardano est le premier protocole de preuve d'enjeu dont la sécurité est prouvée",
   "wallet.currency.pick.ergo": "Ergo construit des outils cryptographiques avancés et des fonctionnalités DeFi radicalement nouvelles, sur des bases solides issues d'une décennie de recherche et de développement des blockchains",
   "wallet.currency.pick.header": "Choisissez une devise ou une plateforme",
-  "wallet.dashboard.empty.text": "Go to the delegation page to choose what stake pool you want to delegate in.",
+  "wallet.dashboard.empty.text": "Allez sur la page de délégation pour choisir le groupe d'enjeu auquel vous souhaitez déléguer.",
   "wallet.dashboard.empty.title": "Vous n'avez pas encore délégué vos ADA",
   "wallet.dashboard.epochEndTitle": "Temps avant la fin de l'époque",
   "wallet.dashboard.epochProgress": "Progrès dans l'époque",
@@ -446,7 +448,7 @@
   "wallet.dashboard.stakePool.pledge": "Pledge",
   "wallet.dashboard.stakePool.stake": "Enjeu",
   "wallet.dashboard.stakePool.title": "Stake Pool délégué",
-  "wallet.dashboard.stakePool.viewWebpage": "View pool webpage",
+  "wallet.dashboard.stakePool.viewWebpage": "Voir la page web du groupe d'enjeu",
   "wallet.dashboard.summary.adaTitle": "Total ADA",
   "wallet.dashboard.summary.delegatedTitle": "Total Délégué",
   "wallet.dashboard.summary.mangled.can": "{adaAmount} ADA peuvent être corrigés",
@@ -464,14 +466,14 @@
   "wallet.debugwallet.explanation1": "Le portefeuille que vous avez sélectionné ({checksumTextPart}) est destiné aux tests et au débogage.",
   "wallet.debugwallet.explanation2": "Pour éviter tout problème, n'utilisez pas ce portefeuille.<br />Utilisez plutôt Yoroi pour créer un nouveau portefeuille.",
   "wallet.debugwallet.explanation3": "Si vous n'attendiez pas ce message, veuillez {contactSupportLink}.",
-  "wallet.delegate.form.invalidPoolId": "Invalid pool id",
-  "wallet.delegation.poolInfo.fetching": "Fetching pool information",
+  "wallet.delegate.form.invalidPoolId": "Identifiant du groupe d'enjeu invalide",
+  "wallet.delegation.poolInfo.fetching": "Récupération des données du groupe d'enjeu",
   "wallet.delegation.transaction.approximationLabel": "Approximation actuelle des récompenses que vous recevrez par époque :",
   "wallet.delegation.transaction.explanationLine1": "Vous ne pouvez déléguer qu'à un seul pool de mise à la fois",
   "wallet.delegation.transaction.explanationLine2": "Vous pouvez à tout moment changer de pool pour déléguer à un autre pool",
   "wallet.delegation.transaction.explanationLine3": "Vous pouvez annuler votre délégation à tout moment",
   "wallet.delegation.transaction.generation": "Générant la transaction",
-  "wallet.delegation.transaction.stakePoolHash": "Stake pool id",
+  "wallet.delegation.transaction.stakePoolHash": "Id du groupe d'enjeu",
   "wallet.delegation.transaction.stakePoolName": "Nom du pool d'enjeux",
   "wallet.delegation.transaction.success.button.label": "Tableau de bord",
   "wallet.delegation.transaction.success.explanation": "Suivre l'état du groupe d'enjeu (pool) et le temps restant pour recevoir une récompense à partir de la page du tableau de bord.",
@@ -491,13 +493,15 @@
   "wallet.nav.type.paper": "Wallet Papier",
   "wallet.nav.type.standard": "Wallet standard",
   "wallet.nav.type.trezor": "Wallet Trezor",
+  "wallet.navigation.delegationById": "Delegation by Id",
   "wallet.navigation.delegationDashboard": "Tableau de bord",
-  "wallet.navigation.delegationSimple": "Delegation",
+  "wallet.navigation.delegationList": "Delegation List",
   "wallet.navigation.receive": "Recevoir",
   "wallet.navigation.send": "Envoyer",
   "wallet.navigation.transactions": "Transactions",
   "wallet.nowallet.subtitle": "Veuillez choisir un portefeuille dans la liste déroulante en haut à droite",
   "wallet.nowallet.title": "Pas de portefeuille sélectionné",
+  "wallet.problematic.explanation1": "Le portefeuille que vous avez sélectionné ({checksumTextPart}) a été détecté comme contenant une sorte de problème.",
   "wallet.receive.confirmationDialog.addressDetailsTitleLabel": "Vérifier l'adresse",
   "wallet.receive.confirmationDialog.addressLabel": "Adresse",
   "wallet.receive.confirmationDialog.addressesLabel": "Adresses",
@@ -513,6 +517,7 @@
   "wallet.receive.navigation.groupLabel": "Groupe",
   "wallet.receive.navigation.hasBalanceLabel": "A un solde",
   "wallet.receive.navigation.p2pkLabel": "P2PK",
+  "wallet.receive.navigation.rewardLabel": "Récompense",
   "wallet.receive.navigation.unusedLabel": "Non utilisé",
   "wallet.receive.navigation.usedLabel": "Utilisé",
   "wallet.receive.page.copyAddressLabel": "Copier l'adresse",
@@ -520,12 +525,14 @@
   "wallet.receive.page.generateURLLabel": "Générer une URL",
   "wallet.receive.page.generatedAddressesSectionTitle": "Adresses générées",
   "wallet.receive.page.internalWarning1": "Les adresses internes (ou adresses de \"change\") préservent votre vie privée en masquant les adresses qui vous appartiennent sur la blockchain",
-  "wallet.receive.page.internalWarning2": "les adresses sont indiquées ici à des fins d'audit personnel et ne doivent <strong>jamais</strong> être utilisées.",
+  "wallet.receive.page.internalWarning2": ": ces adresses sont indiquées ici à des fins d'audit personnel et ne doivent <strong>jamais</strong> être utilisées.",
   "wallet.receive.page.label": "Étiquette",
   "wallet.receive.page.mangledWarning1": "Les adresses mélangées contribuent à votre solde en ADA mais ont une préférence de délégation incorrecte",
   "wallet.receive.page.noResultsFoundLabel": "Pas de résultats trouvés",
   "wallet.receive.page.notFoundAnyAddresses": "Nous n'avons trouvé aucune adresse correspondant à vos critères.",
   "wallet.receive.page.outputAmountUTXO": "Solde (somme des UTXO)",
+  "wallet.receive.page.rewardAddressLine1": "Your reward address holds your rewards and is used to validate any changes to your delegation preference",
+  "wallet.receive.page.rewardAddressLine2": "Vous ne pouvez pas envoyer d'ADA sur des adresses de récompenses, mais nous vous le montrons à des fins d'audit personnel",
   "wallet.receive.page.unmangeLabel": "Corriger la préférence de délégation",
   "wallet.receive.page.verifyAddressLabel": "Vérifier l'adresse",
   "wallet.receive.page.walletAddressLabel": "Votre adresse de wallet",
@@ -609,7 +616,6 @@
   "wallet.settings.unchangedPassword": "Le mot de passe n'a pas été modifié depuis la création du wallet",
   "wallet.staking.pool.unknownLabel": "Groupe d'enjeu inconnu",
   "wallet.staking.warning.pendingTx": "Vous ne pouvez pas modifier vos préférences de délégation pendant qu'une transaction est en cours",
-  "wallet.staking.warning.title": "Délégation temporairement désactivée",
   "wallet.summary.no.transaction": "Aucune transaction",
   "wallet.summary.page.dateTime": "Date/Heure",
   "wallet.summary.page.integratedNotificationMessage": "Vous avez connecté avec succès votre {deviceName}",
@@ -632,17 +638,17 @@
   "wallet.transaction.assuranceLevel.high": "élevé",
   "wallet.transaction.assuranceLevel.low": "bas",
   "wallet.transaction.assuranceLevel.medium": "moyen",
-  "wallet.transaction.certificate.GenesisKeyDelegation": "Genesis key delegation",
-  "wallet.transaction.certificate.MoveInstantaneousRewardsCert": "Manually-initiated reward payout",
+  "wallet.transaction.certificate.GenesisKeyDelegation": "Délégation de Genesis key",
+  "wallet.transaction.certificate.MoveInstantaneousRewardsCert": "Paiement de récompenses manuel",
   "wallet.transaction.certificate.OwnerStakeDelegation": "Délégation d'enjeu du propriétaire",
   "wallet.transaction.certificate.PoolRegistration": "Enregistrement de Pool",
   "wallet.transaction.certificate.PoolRetirement": "Retrait de Pool",
   "wallet.transaction.certificate.PoolUpdate": "Mises à jour de Pool",
   "wallet.transaction.certificate.StakeDelegation": "Délégation d'enjeu",
-  "wallet.transaction.certificate.StakeDeregistration": "Staking key deregistration",
-  "wallet.transaction.certificate.StakeRegistration": "Staking key registration",
+  "wallet.transaction.certificate.StakeDeregistration": "Désinscription d'une clé de délégation",
+  "wallet.transaction.certificate.StakeRegistration": "Enregistrement d'une clé de délégation",
   "wallet.transaction.certificateLabel": "Certificat",
-  "wallet.transaction.certificatesLabel": "Certificates",
+  "wallet.transaction.certificatesLabel": "Certificats",
   "wallet.transaction.confirmations": "confirmations",
   "wallet.transaction.conversion.rate": "Taux de conversion",
   "wallet.transaction.export.dialog.exportButton.label": "Exporter",
@@ -665,13 +671,15 @@
   "wallet.transaction.type.exchange": "Échange",
   "wallet.transaction.type.intrawallet": "Transaction entre wallets {currency}",
   "wallet.transaction.type.multiparty": "Transaction multiparties {currency}",
+  "wallet.transaction.withdrawalsLabel": "Retraits",
   "wallet.transfer.cards.byron": "Wallet de l'ère Byron",
-  "wallet.transfer.cards.shelleyItn": "Testnet Shelley",
+  "wallet.transfer.cards.shelley": "Wallet de type Shelley",
   "wallet.transfer.instruction": "Tout ADA réclamé sera transféré dans votre portefeuille actuellement sélectionné",
   "wallet.undelegation.transaction.explanationLine1": "Vous n'avez PAS besoin d'arrêter une délégation avant de changer de groupe d'enjeu (pool)",
   "wallet.undelegation.transaction.explanationLine2": "Cela prendra 2 époques après la fin de l'époque courante pour que votre choix d'arrêter de déléguer soit effectif",
   "wallet.unsupported.subtitle": "Le portefeuille sélectionné ne prend pas en charge cette fonctionnalité",
   "wallet.unsupported.title": "Type de portefeuille non supporté",
+  "wallet.withdrawal.transaction.unregister": "Cette opération va désinscrire une ou plusieurs clés de staking, ce qui vous permettra de récupérer votre dépôt de {refundAmount} ADA",
   "widgets.copyableaddress.addressCopyTooltipMessage": "Copier dans le presse-papier",
   "widgets.explorer.tooltip": "Aller sur {websiteName}",
   "widgets.warningBox.headerText": "ATTENTION :",
@@ -689,7 +697,6 @@
   "yoroiTransfer.start.instructions.yoroiPaper": "Wallet papier Yoroi",
   "yoroiTransfer.successPage.text": "Vos fonds ont été transférés avec succès.",
   "yoroiTransfer.successPage.title": "succès",
-  "yoroiTransfer.summary.addressFrom.subLabel": "Adresses du portefeuille",
   "yoroiTransfer.waiting.checkingAddresses.generatingTx": "Génération d'une transaction de transfert",
   "yoroiTransfer.waiting.progressInfo.checkingAddresses": "Vérification des fonds des adresses",
   "yoroiTransfer.waiting.progressInfo.restoringAddresses": "Obtention des adresses",
