--- a/app/i18n/locales/ko-KR.json
+++ b/app/i18n/locales/ko-KR.json
@@ -25,7 +25,7 @@
   "api.errors.getTxsBodiesForUTXOsError": "TxBodies를 가져오던 중 API 오류가 발생했습니다.",
   "api.errors.getUtxosForAddressesApiError": "UTxO를 가져오는 중 서버로부터 오류를 수신했습니다.",
   "api.errors.getUtxosSumsForAddressesApiError": "잔액을 가져오는 중 서버로부터 오류를 수신했습니다.",
-  "api.errors.hardwareUnsupportedError": "This hardware wallet is currently not supported.",
+  "api.errors.hardwareUnsupportedError": "This action is not supported for the currently selected hardware.",
   "api.errors.histoicalCoinPriceError": "지나간 가격 데이터 조회는 아직 지원되지 않습니다.",
   "api.errors.invalidMnemonicError": "유효하지 않은 구절입니다. 다시 확인해 주십시오.",
   "api.errors.invalidWitnessError": "서명이 잘못되었습니다.",
@@ -282,8 +282,8 @@
   "transfer.form.masterkey.input.hint": "마스터키를 입력하세요",
   "transfer.form.masterkey.input.label": "마스터키",
   "transfer.form.masterkey.requirement": "참고: 마스터키는 16진수로 인코딩된 192 글자 길이의 코드입니다.",
-  "transfer.instructions.attention.legacy": "바이런 시대 (2019년 11월 29일 이전)에 만들어진 레거시 지갑은 더이상 사용될 수 없습니다. 신형 지갑을 생성하여 자금을 레거시 지갑에서 이체한 후 사용할 수 있습니다.",
   "transfer.instructions.attention.title.label": "주의사항",
+  "transfer.instructions.fee.source.disclaimer": "The transaction fee to claim funds will be paid by the wallet you currently have selected.",
   "transfer.instructions.hardware.disclaimer.checkbox": "나는 하드웨어 지갑의 복구 코드를 입력하는 것이 심각한 보안상 위험성을 가지고 있음을 인지하고 있습니다.",
   "transfer.instructions.hardware.disclaimer.instructions1": "하드웨어 지갑을 처음 설정할 때 종이에 적어두었던 복구 코드를 입력하면 하드웨어 지갑에 보관되고 있는 자금이 현재 지갑으로 이동됩니다.",
   "transfer.instructions.hardware.disclaimer.instructions2": "이 기능을 사용한다면 하드웨어 지갑의 복구 코드를 새롭게 생성하여야 합니다. 만약 당신이 이것이 왜 필요하거나 어떻게 하는지 모른다면, 이 기능을 사용하지 않기를 권장합니다.",
@@ -293,8 +293,9 @@
   "transfer.legacy.daedalus.12word": "12 단어 다이달로스 지갑 코드",
   "transfer.legacy.daedalus.title": "레거시 다이달로스 지갑",
   "transfer.legacy.icarus.title": "이카루스/요로이 지갑",
+  "transfer.rewards.paper.label": "Rewards from paper wallet",
+  "transfer.rewards.regular.label": "Rewards from recovery phrase",
   "transfer.summary.addressFrom.label": "보내는 사람",
-  "transfer.summary.addressTo.label": "받는 사람",
   "transfer.summary.finalBalance.label": "최종 잔액",
   "transfer.summary.recoveredBalance.label": "복구된 잔액",
   "transfer.summary.transactionFee.label": "거래 수수료",
@@ -350,6 +351,7 @@
   "wallet.address.category.byron": "Addresses created using the Byron-era address format",
   "wallet.address.category.group": "Addresses formed by the combination of a spending key and a staking key",
   "wallet.address.category.p2pk": "Addresses generated directly from a public key",
+  "wallet.address.category.reward": "Address for your staking key",
   "wallet.amountInput.feesLabel": "+ {amount}의 수수료",
   "wallet.backup.dialog.legacy.checkConfirm": "지갑 업그레이드가 필요한지 체크하겠습니까?",
   "wallet.backup.dialog.legacy.explanation": "만약 당신이 2019년 11월 29일에 ADA를 지갑에 보관하고 있었다면, 새로운 쉘리 \"보상 지갑\"으로 지갑을 업그레이드 해야 합니다.",
@@ -491,13 +493,15 @@
   "wallet.nav.type.paper": "종이 지갑",
   "wallet.nav.type.standard": "표준 지갑",
   "wallet.nav.type.trezor": "Trezor 지갑",
+  "wallet.navigation.delegationById": "Delegation by Id",
   "wallet.navigation.delegationDashboard": "대시보드",
-  "wallet.navigation.delegationSimple": "Delegation",
+  "wallet.navigation.delegationList": "Delegation List",
   "wallet.navigation.receive": "받기",
   "wallet.navigation.send": "보내기",
   "wallet.navigation.transactions": "거래",
   "wallet.nowallet.subtitle": "우상단의 드롭 다운 버튼을 눌러 지갑을 선택하세요.",
   "wallet.nowallet.title": "선택된 지갑 없음",
+  "wallet.problematic.explanation1": "The wallet you selected ({checksumTextPart}) was detected to contain some kind of issue.",
   "wallet.receive.confirmationDialog.addressDetailsTitleLabel": "주소 검증하기",
   "wallet.receive.confirmationDialog.addressLabel": "주소",
   "wallet.receive.confirmationDialog.addressesLabel": "주소",
@@ -513,6 +517,7 @@
   "wallet.receive.navigation.groupLabel": "Group",
   "wallet.receive.navigation.hasBalanceLabel": "Has Balance",
   "wallet.receive.navigation.p2pkLabel": "P2PK",
+  "wallet.receive.navigation.rewardLabel": "Reward",
   "wallet.receive.navigation.unusedLabel": "Unused",
   "wallet.receive.navigation.usedLabel": "Used",
   "wallet.receive.page.copyAddressLabel": "주소 복사",
@@ -526,6 +531,8 @@
   "wallet.receive.page.noResultsFoundLabel": "No results found",
   "wallet.receive.page.notFoundAnyAddresses": "We couldn't find any addresses matching your filter.",
   "wallet.receive.page.outputAmountUTXO": "Balance (UTXO sum)",
+  "wallet.receive.page.rewardAddressLine1": "Your reward address holds your rewards and is used to validate any changes to your delegation preference",
+  "wallet.receive.page.rewardAddressLine2": "You cannot send ADA to reward addresses, but we show it for personal auditing purposes",
   "wallet.receive.page.unmangeLabel": "위임 설정 정정하기",
   "wallet.receive.page.verifyAddressLabel": "주소 검증하기",
   "wallet.receive.page.walletAddressLabel": "내 지갑 주소",
@@ -609,7 +616,6 @@
   "wallet.settings.unchangedPassword": "지갑 생성 이후 비밀번호가 변경되지 않았습니다.",
   "wallet.staking.pool.unknownLabel": "알 수 없는 풀",
   "wallet.staking.warning.pendingTx": "거래가 보류중인 상태에서는 위임 상태를 변경할 수 없습니다.",
-  "wallet.staking.warning.title": "위임이 일시적으로 중단됨",
   "wallet.summary.no.transaction": "거래 없음",
   "wallet.summary.page.dateTime": "날짜/시간",
   "wallet.summary.page.integratedNotificationMessage": "You have successfully integrated with your {deviceName}",
@@ -665,13 +671,15 @@
   "wallet.transaction.type.exchange": "환율",
   "wallet.transaction.type.intrawallet": "{currency} 지갑내 거래",
   "wallet.transaction.type.multiparty": "{currency} 다중 거래",
+  "wallet.transaction.withdrawalsLabel": "Withdrawals",
   "wallet.transfer.cards.byron": "바이런 시대 지갑",
-  "wallet.transfer.cards.shelleyItn": "쉘리 테스트넷",
+  "wallet.transfer.cards.shelley": "Shelley-era wallet",
   "wallet.transfer.instruction": "복구된 모든 ADA는 현재 선택된 지갑으로 전송됩니다.",
   "wallet.undelegation.transaction.explanationLine1": "위임할 풀을 바꾸기 위해서 위임 취소를 할 필요는 없습니다.",
   "wallet.undelegation.transaction.explanationLine2": "위임 취소는 해당 에포크 종료 후 2개 에포크가 지나야 처리됩니다.",
   "wallet.unsupported.subtitle": "The selected wallet does not support this functionality",
   "wallet.unsupported.title": "Wallet type not supported",
+  "wallet.withdrawal.transaction.unregister": "This transaction will unregister one or more staking keys, giving you back your {refundAmount} ADA from your deposit",
   "widgets.copyableaddress.addressCopyTooltipMessage": "클립보드로 복사",
   "widgets.explorer.tooltip": "{websiteName} 로 가기",
   "widgets.warningBox.headerText": "주의:",
@@ -689,7 +697,6 @@
   "yoroiTransfer.start.instructions.yoroiPaper": "요로이 종이 지갑",
   "yoroiTransfer.successPage.text": "귀하의 자금이 성공적으로 전송되었습니다.",
   "yoroiTransfer.successPage.title": "성공",
-  "yoroiTransfer.summary.addressFrom.subLabel": "지갑 주소",
   "yoroiTransfer.waiting.checkingAddresses.generatingTx": "전송 거래 생성",
   "yoroiTransfer.waiting.progressInfo.checkingAddresses": "주소의 자금 확인 중",
   "yoroiTransfer.waiting.progressInfo.restoringAddresses": "주소 가져오는 중",
