--- a/app/i18n/locales/zh-Hans.json
+++ b/app/i18n/locales/zh-Hans.json
@@ -25,7 +25,7 @@
   "api.errors.getTxsBodiesForUTXOsError": "从 api 方法调用获取 TxBodies 时收到错误。",
   "api.errors.getUtxosForAddressesApiError": "获取 UTxOs 时从服务器收到错误。",
   "api.errors.getUtxosSumsForAddressesApiError": "获取余额时从服务器收到错误。",
-  "api.errors.hardwareUnsupportedError": "此硬件钱包目前尚不支持。",
+  "api.errors.hardwareUnsupportedError": "当前所选的硬件并不支持该操作。",
   "api.errors.histoicalCoinPriceError": "暂无历史币价。",
   "api.errors.invalidMnemonicError": "无效助记词，请检查",
   "api.errors.invalidWitnessError": "签名无效。",
@@ -282,8 +282,8 @@
   "transfer.form.masterkey.input.hint": "输入主密钥",
   "transfer.form.masterkey.input.label": "主密钥",
   "transfer.form.masterkey.requirement": "注意：主密钥为192个字符并使用十六进制编码",
-  "transfer.instructions.attention.legacy": "Byron阶段（2019年11月29日前）创建的旧有钱包无法继续使用。但你可将旧有钱包中的余额转移到当前的新钱包中。",
   "transfer.instructions.attention.title.label": "注意",
+  "transfer.instructions.fee.source.disclaimer": "The transaction fee to claim funds will be paid by the wallet you currently have selected.",
   "transfer.instructions.hardware.disclaimer.checkbox": "我确认输入硬件钱包的恢复短语存在巨大的风险。",
   "transfer.instructions.hardware.disclaimer.instructions1": "最初设置硬件钱包时，会要求您在纸上写下恢复短语。输入此短语，您能够将资金从硬件钱包转移到当前的钱包中。",
   "transfer.instructions.hardware.disclaimer.instructions2": "如果使用此功能，则应为硬件钱包生成一个新的恢复短语。如果您不知道为什么或如何执行此操作，我们不建议您使用此功能。",
@@ -293,8 +293,9 @@
   "transfer.legacy.daedalus.12word": "12词Daedalus钱包",
   "transfer.legacy.daedalus.title": "旧有Daedalus钱包",
   "transfer.legacy.icarus.title": "Icarus/Yoroi钱包",
+  "transfer.rewards.paper.label": "来自纸钱包的奖励",
+  "transfer.rewards.regular.label": "来自恢复助记词的奖励",
   "transfer.summary.addressFrom.label": "从",
-  "transfer.summary.addressTo.label": "到",
   "transfer.summary.finalBalance.label": "最终余额",
   "transfer.summary.recoveredBalance.label": "恢复的余额",
   "transfer.summary.transactionFee.label": "交易手续费",
@@ -350,6 +351,7 @@
   "wallet.address.category.byron": "使用Byron时期的地址格式创建的地址",
   "wallet.address.category.group": "使用支付密钥和权益密钥的组合创建的地址",
   "wallet.address.category.p2pk": "直接从公钥创建的地址",
+  "wallet.address.category.reward": "委托密钥地址",
   "wallet.amountInput.feesLabel": "+ {amount} 手续费",
   "wallet.backup.dialog.legacy.checkConfirm": "检查您的钱包是否需要升级？",
   "wallet.backup.dialog.legacy.explanation": "如果你的钱包（2019年11月29日前）中有ADA，你需要将您的钱包升级至Shelley钱包。",
@@ -491,13 +493,15 @@
   "wallet.nav.type.paper": "纸钱包",
   "wallet.nav.type.standard": "标准钱包",
   "wallet.nav.type.trezor": "Trezor钱包",
+  "wallet.navigation.delegationById": "Delegation by Id",
   "wallet.navigation.delegationDashboard": "总览",
-  "wallet.navigation.delegationSimple": "委托",
+  "wallet.navigation.delegationList": "Delegation List",
   "wallet.navigation.receive": "接收",
   "wallet.navigation.send": "发送",
   "wallet.navigation.transactions": "交易",
   "wallet.nowallet.subtitle": "Please choose a wallet from the top-right dropdown",
   "wallet.nowallet.title": "未选择钱包",
+  "wallet.problematic.explanation1": "你所选择的钱包{checksumTextPart} 检测到包含一些错误。",
   "wallet.receive.confirmationDialog.addressDetailsTitleLabel": "校验地址",
   "wallet.receive.confirmationDialog.addressLabel": "地址",
   "wallet.receive.confirmationDialog.addressesLabel": "地址",
@@ -513,6 +517,7 @@
   "wallet.receive.navigation.groupLabel": "组",
   "wallet.receive.navigation.hasBalanceLabel": "有余额",
   "wallet.receive.navigation.p2pkLabel": "P2PK",
+  "wallet.receive.navigation.rewardLabel": "奖励",
   "wallet.receive.navigation.unusedLabel": "未使用",
   "wallet.receive.navigation.usedLabel": "已使用",
   "wallet.receive.page.copyAddressLabel": "复制地址",
@@ -526,6 +531,8 @@
   "wallet.receive.page.noResultsFoundLabel": "未发现结果",
   "wallet.receive.page.notFoundAnyAddresses": "无法找到复合您的搜索条件的任何地址",
   "wallet.receive.page.outputAmountUTXO": "余额（UTXO总和）",
+  "wallet.receive.page.rewardAddressLine1": "Your reward address holds your rewards and is used to validate any changes to your delegation preference",
+  "wallet.receive.page.rewardAddressLine2": "您无法将ADA发送至奖励地址",
   "wallet.receive.page.unmangeLabel": "纠正授权偏好",
   "wallet.receive.page.verifyAddressLabel": "校验地址",
   "wallet.receive.page.walletAddressLabel": "您的钱包地址",
@@ -609,7 +616,6 @@
   "wallet.settings.unchangedPassword": "自钱包创建起密码未改变",
   "wallet.staking.pool.unknownLabel": "未知权益池",
   "wallet.staking.warning.pendingTx": "有交易暂挂时您无法更改委托偏好",
-  "wallet.staking.warning.title": "暂时无法使用委托",
   "wallet.summary.no.transaction": "未找到交易",
   "wallet.summary.page.dateTime": "日期/时间",
   "wallet.summary.page.integratedNotificationMessage": "您已成功整合您的{deviceName}",
@@ -633,14 +639,14 @@
   "wallet.transaction.assuranceLevel.low": "低",
   "wallet.transaction.assuranceLevel.medium": "中",
   "wallet.transaction.certificate.GenesisKeyDelegation": "Genesis key delegation",
-  "wallet.transaction.certificate.MoveInstantaneousRewardsCert": "Manually-initiated reward payout",
+  "wallet.transaction.certificate.MoveInstantaneousRewardsCert": "手动奖励",
   "wallet.transaction.certificate.OwnerStakeDelegation": "权益池主权益授权",
   "wallet.transaction.certificate.PoolRegistration": "权益池注册",
   "wallet.transaction.certificate.PoolRetirement": "权益池退役",
   "wallet.transaction.certificate.PoolUpdate": "权益池更新",
   "wallet.transaction.certificate.StakeDelegation": "权益委托",
-  "wallet.transaction.certificate.StakeDeregistration": "Staking key deregistration",
-  "wallet.transaction.certificate.StakeRegistration": "Staking key registration",
+  "wallet.transaction.certificate.StakeDeregistration": "委托密钥解注册",
+  "wallet.transaction.certificate.StakeRegistration": "委托密钥注册",
   "wallet.transaction.certificateLabel": "证书",
   "wallet.transaction.certificatesLabel": "证书",
   "wallet.transaction.confirmations": "确认",
@@ -665,13 +671,15 @@
   "wallet.transaction.type.exchange": "交易所",
   "wallet.transaction.type.intrawallet": "{currency} 钱包内交易",
   "wallet.transaction.type.multiparty": "{currency} 多方交易",
+  "wallet.transaction.withdrawalsLabel": "赎回",
   "wallet.transfer.cards.byron": "Byron时期钱包",
-  "wallet.transfer.cards.shelleyItn": "Shelly测试网",
+  "wallet.transfer.cards.shelley": "Shelly时期钱包",
   "wallet.transfer.instruction": "所有的ADA会转移到你目前选择的钱包中",
   "wallet.undelegation.transaction.explanationLine1": "切换权益池之前，您无需先解除委托",
   "wallet.undelegation.transaction.explanationLine2": "撤销委托要在当前时代结束后的2个时代才能生效",
   "wallet.unsupported.subtitle": "所选的钱包不支持此功能",
   "wallet.unsupported.title": "钱包类型暂不支持",
+  "wallet.withdrawal.transaction.unregister": "This transaction will unregister one or more staking keys, giving you back your {refundAmount} ADA from your deposit",
   "widgets.copyableaddress.addressCopyTooltipMessage": "复制到剪贴板",
   "widgets.explorer.tooltip": "前往{websiteName}",
   "widgets.warningBox.headerText": "注意：",
@@ -689,7 +697,6 @@
   "yoroiTransfer.start.instructions.yoroiPaper": "Yoroi 纸钱包",
   "yoroiTransfer.successPage.text": "已成功将余额转移。",
   "yoroiTransfer.successPage.title": "成功",
-  "yoroiTransfer.summary.addressFrom.subLabel": "钱包地址",
   "yoroiTransfer.waiting.checkingAddresses.generatingTx": "正在生成转账交易",
   "yoroiTransfer.waiting.progressInfo.checkingAddresses": "正在检查资金地址",
   "yoroiTransfer.waiting.progressInfo.restoringAddresses": "正在获取地址",
