--- a/app/i18n/locales/zh-Hant.json
+++ b/app/i18n/locales/zh-Hant.json
@@ -25,7 +25,7 @@
   "api.errors.getTxsBodiesForUTXOsError": "取得TxBodies時出現api method call錯誤。",
   "api.errors.getUtxosForAddressesApiError": "取得 UTxOs 時出現伺服器錯誤。",
   "api.errors.getUtxosSumsForAddressesApiError": "取得餘額時出現伺服器錯誤。",
-  "api.errors.hardwareUnsupportedError": "This hardware wallet is currently not supported.",
+  "api.errors.hardwareUnsupportedError": "This action is not supported for the currently selected hardware.",
   "api.errors.histoicalCoinPriceError": "Historical coin price data not available now.",
   "api.errors.invalidMnemonicError": "輸入的短語無效, 請檢查",
   "api.errors.invalidWitnessError": "簽章無效。",
@@ -282,8 +282,8 @@
   "transfer.form.masterkey.input.hint": "輸入主密鑰",
   "transfer.form.masterkey.input.label": "主密鑰",
   "transfer.form.masterkey.requirement": "注意: 主密鑰為192個字元及十六進位編碼",
-  "transfer.instructions.attention.legacy": "Legacy wallets created during the Byron-era (before November 29th, 2019) can no longer be used. However, you can transfer your legacy funds to your current wallet to access your funds.",
   "transfer.instructions.attention.title.label": "注意",
+  "transfer.instructions.fee.source.disclaimer": "The transaction fee to claim funds will be paid by the wallet you currently have selected.",
   "transfer.instructions.hardware.disclaimer.checkbox": "I acknowledge that entering my hardware wallet's recovery phrase carries significant risk.",
   "transfer.instructions.hardware.disclaimer.instructions1": "When you originally setup your hardware wallet, you were asked to write down a recovery phrase on a piece of paper. Entering this phrase will allow you to transfer your funds out of your hardware wallet and into the current wallet.",
   "transfer.instructions.hardware.disclaimer.instructions2": "If you use this feature, you should generate a new recovery phrase for your hardware wallet. If you don't know why or how to do this, we do not recommend you use this feature.",
@@ -293,8 +293,9 @@
   "transfer.legacy.daedalus.12word": "12-word Daedalus wallet",
   "transfer.legacy.daedalus.title": "Legacy Daedalus Wallet",
   "transfer.legacy.icarus.title": "Icarus/Yoroi Wallet",
+  "transfer.rewards.paper.label": "Rewards from paper wallet",
+  "transfer.rewards.regular.label": "Rewards from recovery phrase",
   "transfer.summary.addressFrom.label": "寄件人",
-  "transfer.summary.addressTo.label": "收件人",
   "transfer.summary.finalBalance.label": "最終餘額",
   "transfer.summary.recoveredBalance.label": "恢復的餘額",
   "transfer.summary.transactionFee.label": "交易費用",
@@ -350,6 +351,7 @@
   "wallet.address.category.byron": "Addresses created using the Byron-era address format",
   "wallet.address.category.group": "Addresses formed by the combination of a spending key and a staking key",
   "wallet.address.category.p2pk": "Addresses generated directly from a public key",
+  "wallet.address.category.reward": "Address for your staking key",
   "wallet.amountInput.feesLabel": "+ {amount} 費用",
   "wallet.backup.dialog.legacy.checkConfirm": "Do you want to check if your wallet needs to be upgraded?",
   "wallet.backup.dialog.legacy.explanation": "If you had any ADA in your wallet on November 29th, 2019\n    you have to upgrade your wallet to a Shelley \"reward wallet\".",
@@ -491,13 +493,15 @@
   "wallet.nav.type.paper": "Paper wallet",
   "wallet.nav.type.standard": "Standard wallet",
   "wallet.nav.type.trezor": "Trezor wallet",
+  "wallet.navigation.delegationById": "Delegation by Id",
   "wallet.navigation.delegationDashboard": "Dashboard",
-  "wallet.navigation.delegationSimple": "Delegation",
+  "wallet.navigation.delegationList": "Delegation List",
   "wallet.navigation.receive": "接收",
   "wallet.navigation.send": "傳送",
   "wallet.navigation.transactions": "交易",
   "wallet.nowallet.subtitle": "Please choose a wallet from the top-right dropdown",
   "wallet.nowallet.title": "No wallet selected",
+  "wallet.problematic.explanation1": "The wallet you selected ({checksumTextPart}) was detected to contain some kind of issue.",
   "wallet.receive.confirmationDialog.addressDetailsTitleLabel": "驗證地址",
   "wallet.receive.confirmationDialog.addressLabel": "地址",
   "wallet.receive.confirmationDialog.addressesLabel": "Addresses",
@@ -513,6 +517,7 @@
   "wallet.receive.navigation.groupLabel": "Group",
   "wallet.receive.navigation.hasBalanceLabel": "Has Balance",
   "wallet.receive.navigation.p2pkLabel": "P2PK",
+  "wallet.receive.navigation.rewardLabel": "Reward",
   "wallet.receive.navigation.unusedLabel": "Unused",
   "wallet.receive.navigation.usedLabel": "Used",
   "wallet.receive.page.copyAddressLabel": "複製地址",
@@ -526,6 +531,8 @@
   "wallet.receive.page.noResultsFoundLabel": "No results found",
   "wallet.receive.page.notFoundAnyAddresses": "We couldn't find any addresses matching your filter.",
   "wallet.receive.page.outputAmountUTXO": "Balance (UTXO sum)",
+  "wallet.receive.page.rewardAddressLine1": "Your reward address holds your rewards and is used to validate any changes to your delegation preference",
+  "wallet.receive.page.rewardAddressLine2": "You cannot send ADA to reward addresses, but we show it for personal auditing purposes",
   "wallet.receive.page.unmangeLabel": "Correct delegation preference",
   "wallet.receive.page.verifyAddressLabel": "驗證地址",
   "wallet.receive.page.walletAddressLabel": "您的錢包地址",
@@ -609,7 +616,6 @@
   "wallet.settings.unchangedPassword": "自錢包創建起密碼未改變",
   "wallet.staking.pool.unknownLabel": "Unknown pool",
   "wallet.staking.warning.pendingTx": "You cannot change your delegation preference while a transaction is pending",
-  "wallet.staking.warning.title": "Delegation temporarily disabled",
   "wallet.summary.no.transaction": "未找到任何交易",
   "wallet.summary.page.dateTime": "Date/time",
   "wallet.summary.page.integratedNotificationMessage": "You have successfully integrated with your {deviceName}",
@@ -665,13 +671,15 @@
   "wallet.transaction.type.exchange": "兌換",
   "wallet.transaction.type.intrawallet": "{currency} 錢包間交易",
   "wallet.transaction.type.multiparty": "{currency} 多方交易",
+  "wallet.transaction.withdrawalsLabel": "Withdrawals",
   "wallet.transfer.cards.byron": "Byron-era wallet",
-  "wallet.transfer.cards.shelleyItn": "Shelley testnet",
+  "wallet.transfer.cards.shelley": "Shelley-era wallet",
   "wallet.transfer.instruction": "Any ADA claimed will be transferred to your currently selected wallet",
   "wallet.undelegation.transaction.explanationLine1": "You do NOT need to undelegate before switching stake pools",
   "wallet.undelegation.transaction.explanationLine2": "It will take 2 epochs after the end of the current epoch for undelegation to take effect",
   "wallet.unsupported.subtitle": "The selected wallet does not support this functionality",
   "wallet.unsupported.title": "Wallet type not supported",
+  "wallet.withdrawal.transaction.unregister": "This transaction will unregister one or more staking keys, giving you back your {refundAmount} ADA from your deposit",
   "widgets.copyableaddress.addressCopyTooltipMessage": "複製到剪貼板",
   "widgets.explorer.tooltip": "前往{websiteName}",
   "widgets.warningBox.headerText": "注意：",
@@ -689,7 +697,6 @@
   "yoroiTransfer.start.instructions.yoroiPaper": "Yoroi 紙錢包",
   "yoroiTransfer.successPage.text": "您的資金已成功轉帳。",
   "yoroiTransfer.successPage.title": "成功",
-  "yoroiTransfer.summary.addressFrom.subLabel": "錢包地址",
   "yoroiTransfer.waiting.checkingAddresses.generatingTx": "產生轉移交易",
   "yoroiTransfer.waiting.progressInfo.checkingAddresses": "檢查地址資金",
   "yoroiTransfer.waiting.progressInfo.restoringAddresses": "獲取地址",
